--- a/dns/src/github.com/johnstarich/go/dns/scutil/config.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/config.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.16.14";</script>
+<script>var goVersion = "go1.16.15";</script>
 <script src="/go/dns/lib/godoc/godocs.js" defer=""></script>
 
 </head>
@@ -81,111 +81,117 @@
 <span id="L24" class="ln">    24  </span>	MulticastDNS   bool
 <span id="L25" class="ln">    25  </span>	Nameservers    []string
 <span id="L26" class="ln">    26  </span>	Order          int
-<span id="L27" class="ln">    27  </span>	Reach          []Reach
-<span id="L28" class="ln">    28  </span>	reachable      bool <span class="comment">// cached status from Reach</span>
-<span id="L29" class="ln">    29  </span>	SearchDomain   []string
-<span id="L30" class="ln">    30  </span>	Timeout        time.Duration
-<span id="L31" class="ln">    31  </span>}
-<span id="L32" class="ln">    32  </span>
-<span id="L33" class="ln">    33  </span>func ReadMacOSDNS(ctx context.Context) (Config, error) {
-<span id="L34" class="ln">    34  </span>	return readMacOSDNS(ctx, runSCUtilDNS)
-<span id="L35" class="ln">    35  </span>}
-<span id="L36" class="ln">    36  </span>
-<span id="L37" class="ln">    37  </span>func runSCUtilDNS(ctx context.Context) ([]byte, error) {
-<span id="L38" class="ln">    38  </span>	cmd := exec.CommandContext(ctx, &#34;/usr/sbin/scutil&#34;, &#34;--dns&#34;)
-<span id="L39" class="ln">    39  </span>	return cmd.CombinedOutput()
-<span id="L40" class="ln">    40  </span>}
-<span id="L41" class="ln">    41  </span>
-<span id="L42" class="ln">    42  </span>type scutilExecutor func(ctx context.Context) ([]byte, error)
-<span id="L43" class="ln">    43  </span>
-<span id="L44" class="ln">    44  </span>func readMacOSDNS(ctx context.Context, getSCUtilDNS scutilExecutor) (Config, error) {
-<span id="L45" class="ln">    45  </span>	output, err := getSCUtilDNS(ctx)
-<span id="L46" class="ln">    46  </span>	if err != nil {
-<span id="L47" class="ln">    47  </span>		return Config{}, err
-<span id="L48" class="ln">    48  </span>	}
-<span id="L49" class="ln">    49  </span>
-<span id="L50" class="ln">    50  </span>	scanner := bufio.NewScanner(bytes.NewReader(output))
-<span id="L51" class="ln">    51  </span>	var config Config
-<span id="L52" class="ln">    52  </span>	for scanner.Scan() {
-<span id="L53" class="ln">    53  </span>		key, value := splitKeyValue(scanner.Text())
-<span id="L54" class="ln">    54  </span>		if strings.Contains(key, &#34;resolver&#34;) {
-<span id="L55" class="ln">    55  </span>			config.Resolvers = append(config.Resolvers, Resolver{})
-<span id="L56" class="ln">    56  </span>			continue
-<span id="L57" class="ln">    57  </span>		}
-<span id="L58" class="ln">    58  </span>		if len(config.Resolvers) == 0 {
-<span id="L59" class="ln">    59  </span>			continue
-<span id="L60" class="ln">    60  </span>		}
-<span id="L61" class="ln">    61  </span>
-<span id="L62" class="ln">    62  </span>		currentResolver := &amp;config.Resolvers[len(config.Resolvers)-1]
-<span id="L63" class="ln">    63  </span>		switch {
-<span id="L64" class="ln">    64  </span>		case strings.Contains(key, &#34;search domain&#34;):
-<span id="L65" class="ln">    65  </span>			currentResolver.SearchDomain = append(currentResolver.SearchDomain, value)
-<span id="L66" class="ln">    66  </span>		case strings.Contains(key, &#34;domain&#34;):
-<span id="L67" class="ln">    67  </span>			currentResolver.Domain = value
-<span id="L68" class="ln">    68  </span>		case strings.Contains(key, &#34;flags&#34;):
-<span id="L69" class="ln">    69  </span>			for _, flag := range strings.Split(value, &#34;,&#34;) {
-<span id="L70" class="ln">    70  </span>				currentResolver.Flags = append(currentResolver.Flags, Flag(strings.TrimSpace(flag)))
-<span id="L71" class="ln">    71  </span>			}
-<span id="L72" class="ln">    72  </span>		case strings.Contains(key, &#34;if_index&#34;):
-<span id="L73" class="ln">    73  </span>			tokens := strings.SplitN(value, &#34; &#34;, 2)
-<span id="L74" class="ln">    74  </span>			if len(tokens) == 2 {
-<span id="L75" class="ln">    75  </span>				currentResolver.InterfaceName = strings.Trim(tokens[1], &#34;()&#34;)
-<span id="L76" class="ln">    76  </span>			}
-<span id="L77" class="ln">    77  </span>
-<span id="L78" class="ln">    78  </span>			i, err := strconv.ParseInt(tokens[0], 10, 64)
-<span id="L79" class="ln">    79  </span>			if err == nil {
-<span id="L80" class="ln">    80  </span>				currentResolver.InterfaceIndex = int(i)
-<span id="L81" class="ln">    81  </span>			}
-<span id="L82" class="ln">    82  </span>		case strings.Contains(key, &#34;options&#34;):
-<span id="L83" class="ln">    83  </span>			currentResolver.MulticastDNS = strings.Contains(value, &#34;mdns&#34;)
-<span id="L84" class="ln">    84  </span>		case strings.Contains(key, &#34;nameserver&#34;):
-<span id="L85" class="ln">    85  </span>			currentResolver.Nameservers = append(currentResolver.Nameservers, value)
-<span id="L86" class="ln">    86  </span>		case strings.Contains(key, &#34;order&#34;):
-<span id="L87" class="ln">    87  </span>			i, err := strconv.ParseInt(value, 10, 64)
-<span id="L88" class="ln">    88  </span>			if err == nil {
-<span id="L89" class="ln">    89  </span>				currentResolver.Order = int(i)
-<span id="L90" class="ln">    90  </span>			}
-<span id="L91" class="ln">    91  </span>		case strings.Contains(key, &#34;reach&#34;):
-<span id="L92" class="ln">    92  </span>			tokens := strings.SplitN(value, &#34; &#34;, 2)
-<span id="L93" class="ln">    93  </span>			if len(tokens) == 2 {
-<span id="L94" class="ln">    94  </span>				reach := strings.Trim(tokens[1], &#34;()&#34;)
-<span id="L95" class="ln">    95  </span>				for _, statusStr := range strings.Split(reach, &#34;,&#34;) {
-<span id="L96" class="ln">    96  </span>					status := Reach(statusStr)
-<span id="L97" class="ln">    97  </span>					if status == Reachable {
-<span id="L98" class="ln">    98  </span>						currentResolver.reachable = true
-<span id="L99" class="ln">    99  </span>					}
-<span id="L100" class="ln">   100  </span>					currentResolver.Reach = append(currentResolver.Reach, status)
-<span id="L101" class="ln">   101  </span>				}
-<span id="L102" class="ln">   102  </span>			}
-<span id="L103" class="ln">   103  </span>		case strings.Contains(key, &#34;timeout&#34;):
-<span id="L104" class="ln">   104  </span>			i, err := strconv.ParseInt(value, 10, 64)
-<span id="L105" class="ln">   105  </span>			if err == nil {
-<span id="L106" class="ln">   106  </span>				currentResolver.Timeout = time.Duration(i) * time.Second
-<span id="L107" class="ln">   107  </span>			}
-<span id="L108" class="ln">   108  </span>		}
-<span id="L109" class="ln">   109  </span>	}
-<span id="L110" class="ln">   110  </span>
-<span id="L111" class="ln">   111  </span>	return config, nil
-<span id="L112" class="ln">   112  </span>}
-<span id="L113" class="ln">   113  </span>
-<span id="L114" class="ln">   114  </span>func splitKeyValue(line string) (key, value string) {
-<span id="L115" class="ln">   115  </span>	tokens := strings.SplitN(line, &#34;:&#34;, 2)
-<span id="L116" class="ln">   116  </span>	switch len(tokens) {
-<span id="L117" class="ln">   117  </span>	case 1:
-<span id="L118" class="ln">   118  </span>		return strings.TrimSpace(tokens[0]), &#34;&#34;
-<span id="L119" class="ln">   119  </span>	default:
-<span id="L120" class="ln">   120  </span>		return strings.TrimSpace(tokens[0]), strings.TrimSpace(tokens[1])
-<span id="L121" class="ln">   121  </span>	}
-<span id="L122" class="ln">   122  </span>}
-<span id="L123" class="ln">   123  </span>
-<span id="L124" class="ln">   124  </span>func (r Resolver) Reachable() bool {
-<span id="L125" class="ln">   125  </span>	return r.reachable
-<span id="L126" class="ln">   126  </span>}
-<span id="L127" class="ln">   127  </span>
+<span id="L27" class="ln">    27  </span>	Port           int
+<span id="L28" class="ln">    28  </span>	Reach          []Reach
+<span id="L29" class="ln">    29  </span>	reachable      bool <span class="comment">// cached status from Reach</span>
+<span id="L30" class="ln">    30  </span>	SearchDomain   []string
+<span id="L31" class="ln">    31  </span>	Timeout        time.Duration
+<span id="L32" class="ln">    32  </span>}
+<span id="L33" class="ln">    33  </span>
+<span id="L34" class="ln">    34  </span>func ReadMacOSDNS(ctx context.Context) (Config, error) {
+<span id="L35" class="ln">    35  </span>	return readMacOSDNS(ctx, runSCUtilDNS)
+<span id="L36" class="ln">    36  </span>}
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>func runSCUtilDNS(ctx context.Context) ([]byte, error) {
+<span id="L39" class="ln">    39  </span>	cmd := exec.CommandContext(ctx, &#34;/usr/sbin/scutil&#34;, &#34;--dns&#34;)
+<span id="L40" class="ln">    40  </span>	return cmd.CombinedOutput()
+<span id="L41" class="ln">    41  </span>}
+<span id="L42" class="ln">    42  </span>
+<span id="L43" class="ln">    43  </span>type scutilExecutor func(ctx context.Context) ([]byte, error)
+<span id="L44" class="ln">    44  </span>
+<span id="L45" class="ln">    45  </span>func readMacOSDNS(ctx context.Context, getSCUtilDNS scutilExecutor) (Config, error) {
+<span id="L46" class="ln">    46  </span>	output, err := getSCUtilDNS(ctx)
+<span id="L47" class="ln">    47  </span>	if err != nil {
+<span id="L48" class="ln">    48  </span>		return Config{}, err
+<span id="L49" class="ln">    49  </span>	}
+<span id="L50" class="ln">    50  </span>
+<span id="L51" class="ln">    51  </span>	scanner := bufio.NewScanner(bytes.NewReader(output))
+<span id="L52" class="ln">    52  </span>	var config Config
+<span id="L53" class="ln">    53  </span>	for scanner.Scan() {
+<span id="L54" class="ln">    54  </span>		key, value := splitKeyValue(scanner.Text())
+<span id="L55" class="ln">    55  </span>		if strings.Contains(key, &#34;resolver&#34;) {
+<span id="L56" class="ln">    56  </span>			config.Resolvers = append(config.Resolvers, Resolver{})
+<span id="L57" class="ln">    57  </span>			continue
+<span id="L58" class="ln">    58  </span>		}
+<span id="L59" class="ln">    59  </span>		if len(config.Resolvers) == 0 {
+<span id="L60" class="ln">    60  </span>			continue
+<span id="L61" class="ln">    61  </span>		}
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>		currentResolver := &amp;config.Resolvers[len(config.Resolvers)-1]
+<span id="L64" class="ln">    64  </span>		switch {
+<span id="L65" class="ln">    65  </span>		case strings.Contains(key, &#34;search domain&#34;):
+<span id="L66" class="ln">    66  </span>			currentResolver.SearchDomain = append(currentResolver.SearchDomain, value)
+<span id="L67" class="ln">    67  </span>		case strings.Contains(key, &#34;domain&#34;):
+<span id="L68" class="ln">    68  </span>			currentResolver.Domain = value
+<span id="L69" class="ln">    69  </span>		case strings.Contains(key, &#34;flags&#34;):
+<span id="L70" class="ln">    70  </span>			for _, flag := range strings.Split(value, &#34;,&#34;) {
+<span id="L71" class="ln">    71  </span>				currentResolver.Flags = append(currentResolver.Flags, Flag(strings.TrimSpace(flag)))
+<span id="L72" class="ln">    72  </span>			}
+<span id="L73" class="ln">    73  </span>		case strings.Contains(key, &#34;if_index&#34;):
+<span id="L74" class="ln">    74  </span>			tokens := strings.SplitN(value, &#34; &#34;, 2)
+<span id="L75" class="ln">    75  </span>			if len(tokens) == 2 {
+<span id="L76" class="ln">    76  </span>				currentResolver.InterfaceName = strings.Trim(tokens[1], &#34;()&#34;)
+<span id="L77" class="ln">    77  </span>			}
+<span id="L78" class="ln">    78  </span>
+<span id="L79" class="ln">    79  </span>			i, err := strconv.ParseInt(tokens[0], 10, 64)
+<span id="L80" class="ln">    80  </span>			if err == nil {
+<span id="L81" class="ln">    81  </span>				currentResolver.InterfaceIndex = int(i)
+<span id="L82" class="ln">    82  </span>			}
+<span id="L83" class="ln">    83  </span>		case strings.Contains(key, &#34;options&#34;):
+<span id="L84" class="ln">    84  </span>			currentResolver.MulticastDNS = strings.Contains(value, &#34;mdns&#34;)
+<span id="L85" class="ln">    85  </span>		case strings.Contains(key, &#34;port&#34;):
+<span id="L86" class="ln">    86  </span>			i, err := strconv.ParseInt(value, 10, 64)
+<span id="L87" class="ln">    87  </span>			if err == nil {
+<span id="L88" class="ln">    88  </span>				currentResolver.Port = int(i)
+<span id="L89" class="ln">    89  </span>			}
+<span id="L90" class="ln">    90  </span>		case strings.Contains(key, &#34;nameserver&#34;):
+<span id="L91" class="ln">    91  </span>			currentResolver.Nameservers = append(currentResolver.Nameservers, value)
+<span id="L92" class="ln">    92  </span>		case strings.Contains(key, &#34;order&#34;):
+<span id="L93" class="ln">    93  </span>			i, err := strconv.ParseInt(value, 10, 64)
+<span id="L94" class="ln">    94  </span>			if err == nil {
+<span id="L95" class="ln">    95  </span>				currentResolver.Order = int(i)
+<span id="L96" class="ln">    96  </span>			}
+<span id="L97" class="ln">    97  </span>		case strings.Contains(key, &#34;reach&#34;):
+<span id="L98" class="ln">    98  </span>			tokens := strings.SplitN(value, &#34; &#34;, 2)
+<span id="L99" class="ln">    99  </span>			if len(tokens) == 2 {
+<span id="L100" class="ln">   100  </span>				reach := strings.Trim(tokens[1], &#34;()&#34;)
+<span id="L101" class="ln">   101  </span>				for _, statusStr := range strings.Split(reach, &#34;,&#34;) {
+<span id="L102" class="ln">   102  </span>					status := Reach(statusStr)
+<span id="L103" class="ln">   103  </span>					if status == Reachable {
+<span id="L104" class="ln">   104  </span>						currentResolver.reachable = true
+<span id="L105" class="ln">   105  </span>					}
+<span id="L106" class="ln">   106  </span>					currentResolver.Reach = append(currentResolver.Reach, status)
+<span id="L107" class="ln">   107  </span>				}
+<span id="L108" class="ln">   108  </span>			}
+<span id="L109" class="ln">   109  </span>		case strings.Contains(key, &#34;timeout&#34;):
+<span id="L110" class="ln">   110  </span>			i, err := strconv.ParseInt(value, 10, 64)
+<span id="L111" class="ln">   111  </span>			if err == nil {
+<span id="L112" class="ln">   112  </span>				currentResolver.Timeout = time.Duration(i) * time.Second
+<span id="L113" class="ln">   113  </span>			}
+<span id="L114" class="ln">   114  </span>		}
+<span id="L115" class="ln">   115  </span>	}
+<span id="L116" class="ln">   116  </span>
+<span id="L117" class="ln">   117  </span>	return config, nil
+<span id="L118" class="ln">   118  </span>}
+<span id="L119" class="ln">   119  </span>
+<span id="L120" class="ln">   120  </span>func splitKeyValue(line string) (key, value string) {
+<span id="L121" class="ln">   121  </span>	tokens := strings.SplitN(line, &#34;:&#34;, 2)
+<span id="L122" class="ln">   122  </span>	switch len(tokens) {
+<span id="L123" class="ln">   123  </span>	case 1:
+<span id="L124" class="ln">   124  </span>		return strings.TrimSpace(tokens[0]), &#34;&#34;
+<span id="L125" class="ln">   125  </span>	default:
+<span id="L126" class="ln">   126  </span>		return strings.TrimSpace(tokens[0]), strings.TrimSpace(tokens[1])
+<span id="L127" class="ln">   127  </span>	}
+<span id="L128" class="ln">   128  </span>}
+<span id="L129" class="ln">   129  </span>
+<span id="L130" class="ln">   130  </span>func (r Resolver) Reachable() bool {
+<span id="L131" class="ln">   131  </span>	return r.reachable
+<span id="L132" class="ln">   132  </span>}
+<span id="L133" class="ln">   133  </span>
 </pre><p></p>
 
 <div id="footer">
-Build version go1.16.14.<br/>
+Build version go1.16.15.<br/>
 </div>
 
 </div><!-- .container -->
