--- a/dns/pkg/github.com/johnstarich/go/index.html
+++ b/dns/pkg/github.com/johnstarich/go/index.html
@@ -113,7 +113,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Package scutil provides a complete model and parser for &#39;scutil --dns&#39; output.
 					</td>
 				</tr>
 			
