--- a/dns/src/github.com/johnstarich/go/dns/scutil/flag.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/flag.go.html
@@ -57,16 +57,18 @@
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
 <pre><span id="L1" class="ln">     1  </span>package scutil
 <span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>type Flag string
-<span id="L4" class="ln">     4  </span>
-<span id="L5" class="ln">     5  </span>const (
-<span id="L6" class="ln">     6  </span>	<span class="comment">// Scoped requires a resolver to only send queries on the specified interface</span>
-<span id="L7" class="ln">     7  </span>	Scoped Flag = &#34;Scoped&#34;
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>	RequestARecords    Flag = &#34;Request A records&#34;
-<span id="L10" class="ln">    10  </span>	RequestAAAARecords Flag = &#34;Request AAAA records&#34;
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
+<span id="L3" class="ln">     3  </span><span class="comment">// Flag is an scutil flag value. See possible Flag enum values for examples.</span>
+<span id="L4" class="ln">     4  </span>type Flag string
+<span id="L5" class="ln">     5  </span>
+<span id="L6" class="ln">     6  </span><span class="comment">// Common flag values for convenient comparisons</span>
+<span id="L7" class="ln">     7  </span>const (
+<span id="L8" class="ln">     8  </span>	<span class="comment">// Scoped requires a resolver to only send queries on the specified interface</span>
+<span id="L9" class="ln">     9  </span>	Scoped Flag = &#34;Scoped&#34;
+<span id="L10" class="ln">    10  </span>
+<span id="L11" class="ln">    11  </span>	RequestARecords    Flag = &#34;Request A records&#34;
+<span id="L12" class="ln">    12  </span>	RequestAAAARecords Flag = &#34;Request AAAA records&#34;
+<span id="L13" class="ln">    13  </span>)
+<span id="L14" class="ln">    14  </span>
 </pre><p></p>
 
 <div id="footer">
