--- a/dns/src/github.com/johnstarich/go/dns/scutil/reach.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/reach.go.html
@@ -57,39 +57,40 @@
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
 <pre><span id="L1" class="ln">     1  </span>package scutil
 <span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>type Reach string
-<span id="L4" class="ln">     4  </span>
-<span id="L5" class="ln">     5  </span><span class="comment">// docs lifted from the &#39;scutil&#39; man page</span>
-<span id="L6" class="ln">     6  </span>
-<span id="L7" class="ln">     7  </span>const (
-<span id="L8" class="ln">     8  </span>	<span class="comment">// NotReachable is when the specified nodename/address cannot be reached using</span>
-<span id="L9" class="ln">     9  </span>	<span class="comment">// the current network configuration.</span>
-<span id="L10" class="ln">    10  </span>	NotReachable Reach = &#34;Not Reachable&#34;
-<span id="L11" class="ln">    11  </span>	<span class="comment">// Reachable is when the specified nodename/address can be reached using the</span>
-<span id="L12" class="ln">    12  </span>	<span class="comment">// current network configuration.</span>
-<span id="L13" class="ln">    13  </span>	Reachable Reach = &#34;Reachable&#34;
-<span id="L14" class="ln">    14  </span>	<span class="comment">// TransientReachable is when the specified nodename/address can be reached</span>
-<span id="L15" class="ln">    15  </span>	<span class="comment">// via a transient (e.g. PPP) connection.</span>
-<span id="L16" class="ln">    16  </span>	TransientReachable Reach = &#34;Transient Connection&#34;
-<span id="L17" class="ln">    17  </span>	<span class="comment">// ConnectionRequired is when the specified nodename/address can be reached</span>
-<span id="L18" class="ln">    18  </span>	<span class="comment">// using the current network configuration but a connection must first be established.</span>
-<span id="L19" class="ln">    19  </span>	<span class="comment">// As an example, this status would be returned for a dialup connection that</span>
-<span id="L20" class="ln">    20  </span>	<span class="comment">// was not currently active but could handle network traffic for the target system.</span>
-<span id="L21" class="ln">    21  </span>	ConnectionRequired Reach = &#34;Connection Required&#34;
-<span id="L22" class="ln">    22  </span>	<span class="comment">// ConnectionAutomatic is when the specified nodename/address can be reached</span>
-<span id="L23" class="ln">    23  </span>	<span class="comment">// using the current network configuration but a connection must first be</span>
-<span id="L24" class="ln">    24  </span>	<span class="comment">// established. Any traffic directed to the specified name/address will</span>
-<span id="L25" class="ln">    25  </span>	<span class="comment">// initiate the connection.</span>
-<span id="L26" class="ln">    26  </span>	ConnectionAutomatic Reach = &#34;Connection Automatic&#34;
-<span id="L27" class="ln">    27  </span>	<span class="comment">// LocalAddress is when the specified nodename/address is one associated</span>
-<span id="L28" class="ln">    28  </span>	<span class="comment">// with a network interface on the system.</span>
-<span id="L29" class="ln">    29  </span>	LocalAddress Reach = &#34;Local Address&#34;
-<span id="L30" class="ln">    30  </span>	<span class="comment">// DirectlyReachableAddress is when the network traffic to the specified</span>
-<span id="L31" class="ln">    31  </span>	<span class="comment">// nodename/address will not go through a gateway but is routed directly to</span>
-<span id="L32" class="ln">    32  </span>	<span class="comment">// one of the interfaces on the system.</span>
-<span id="L33" class="ln">    33  </span>	DirectlyReachableAddress Reach = &#34;Directly Reachable Address&#34;
-<span id="L34" class="ln">    34  </span>)
-<span id="L35" class="ln">    35  </span>
+<span id="L3" class="ln">     3  </span><span class="comment">// Reach is an scutil &#34;reach&#34; value. See possible Reach enum values for examples.</span>
+<span id="L4" class="ln">     4  </span>type Reach string
+<span id="L5" class="ln">     5  </span>
+<span id="L6" class="ln">     6  </span><span class="comment">// docs lifted from the &#39;scutil&#39; man page</span>
+<span id="L7" class="ln">     7  </span>
+<span id="L8" class="ln">     8  </span>const (
+<span id="L9" class="ln">     9  </span>	<span class="comment">// NotReachable is when the specified nodename/address cannot be reached using</span>
+<span id="L10" class="ln">    10  </span>	<span class="comment">// the current network configuration.</span>
+<span id="L11" class="ln">    11  </span>	NotReachable Reach = &#34;Not Reachable&#34;
+<span id="L12" class="ln">    12  </span>	<span class="comment">// Reachable is when the specified nodename/address can be reached using the</span>
+<span id="L13" class="ln">    13  </span>	<span class="comment">// current network configuration.</span>
+<span id="L14" class="ln">    14  </span>	Reachable Reach = &#34;Reachable&#34;
+<span id="L15" class="ln">    15  </span>	<span class="comment">// TransientReachable is when the specified nodename/address can be reached</span>
+<span id="L16" class="ln">    16  </span>	<span class="comment">// via a transient (e.g. PPP) connection.</span>
+<span id="L17" class="ln">    17  </span>	TransientReachable Reach = &#34;Transient Connection&#34;
+<span id="L18" class="ln">    18  </span>	<span class="comment">// ConnectionRequired is when the specified nodename/address can be reached</span>
+<span id="L19" class="ln">    19  </span>	<span class="comment">// using the current network configuration but a connection must first be established.</span>
+<span id="L20" class="ln">    20  </span>	<span class="comment">// As an example, this status would be returned for a dialup connection that</span>
+<span id="L21" class="ln">    21  </span>	<span class="comment">// was not currently active but could handle network traffic for the target system.</span>
+<span id="L22" class="ln">    22  </span>	ConnectionRequired Reach = &#34;Connection Required&#34;
+<span id="L23" class="ln">    23  </span>	<span class="comment">// ConnectionAutomatic is when the specified nodename/address can be reached</span>
+<span id="L24" class="ln">    24  </span>	<span class="comment">// using the current network configuration but a connection must first be</span>
+<span id="L25" class="ln">    25  </span>	<span class="comment">// established. Any traffic directed to the specified name/address will</span>
+<span id="L26" class="ln">    26  </span>	<span class="comment">// initiate the connection.</span>
+<span id="L27" class="ln">    27  </span>	ConnectionAutomatic Reach = &#34;Connection Automatic&#34;
+<span id="L28" class="ln">    28  </span>	<span class="comment">// LocalAddress is when the specified nodename/address is one associated</span>
+<span id="L29" class="ln">    29  </span>	<span class="comment">// with a network interface on the system.</span>
+<span id="L30" class="ln">    30  </span>	LocalAddress Reach = &#34;Local Address&#34;
+<span id="L31" class="ln">    31  </span>	<span class="comment">// DirectlyReachableAddress is when the network traffic to the specified</span>
+<span id="L32" class="ln">    32  </span>	<span class="comment">// nodename/address will not go through a gateway but is routed directly to</span>
+<span id="L33" class="ln">    33  </span>	<span class="comment">// one of the interfaces on the system.</span>
+<span id="L34" class="ln">    34  </span>	DirectlyReachableAddress Reach = &#34;Directly Reachable Address&#34;
+<span id="L35" class="ln">    35  </span>)
+<span id="L36" class="ln">    36  </span>
 </pre><p></p>
 
 <div id="footer">
