--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
@@ -137,13 +137,16 @@
 		
 			
 			
-			<h2 id="Package">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go#L31">Package</a>
+			<h2 id="Package">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go#L32">Package</a>
 				<a class="permalink" href="#Package">&#xb6;</a>
 				
 				
 			</h2>
 			<pre>func Package(modulePath <a href="/go/gopages/pkg/builtin/#string">string</a>) (<a href="/go/gopages/pkg/builtin/#string">string</a>, <a href="/go/gopages/pkg/builtin/#error">error</a>)</pre>
-			
+			<p>
+Package returns a module&#39;s package path for the given module file path
+</p>
+
 			
 			
 
