--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -143,13 +143,16 @@
 		
 			
 			
-			<h2 id="Docs">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go#L246">Docs</a>
+			<h2 id="Docs">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go#L247">Docs</a>
 				<a class="permalink" href="#Docs">&#xb6;</a>
 				
 				
 			</h2>
 			<pre>func Docs(modulePath, modulePackage <a href="/go/gopages/pkg/builtin/#string">string</a>, src, fs billy.<a href="#Filesystem">Filesystem</a>, args <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/">flags</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/#Args">Args</a>, linker <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/">source</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/#Linker">Linker</a>) <a href="/go/gopages/pkg/builtin/#error">error</a></pre>
-			
+			<p>
+Docs generates documentation pages for the given package
+</p>
+
 			
 			
 
