--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file.go.html
@@ -59,30 +59,33 @@
 <span id="L2" class="ln">     2  </span>
 <span id="L3" class="ln">     3  </span>import &#34;io/ioutil&#34;
 <span id="L4" class="ln">     4  </span>
-<span id="L5" class="ln">     5  </span>type FilePathContents struct {
-<span id="L6" class="ln">     6  </span>	contents []byte
-<span id="L7" class="ln">     7  </span>}
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>func (f *FilePathContents) Contents() []byte {
-<span id="L10" class="ln">    10  </span>	return f.contents
-<span id="L11" class="ln">    11  </span>}
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span>func (f *FilePathContents) String() string {
-<span id="L14" class="ln">    14  </span>	if f == nil || f.contents == nil {
-<span id="L15" class="ln">    15  </span>		return &#34;&#34;
-<span id="L16" class="ln">    16  </span>	}
-<span id="L17" class="ln">    17  </span>	return string(f.contents)
-<span id="L18" class="ln">    18  </span>}
-<span id="L19" class="ln">    19  </span>
-<span id="L20" class="ln">    20  </span>func (f *FilePathContents) Set(s string) error {
-<span id="L21" class="ln">    21  </span>	contents, err := ioutil.ReadFile(s)
-<span id="L22" class="ln">    22  </span>	if err != nil {
-<span id="L23" class="ln">    23  </span>		return err
-<span id="L24" class="ln">    24  </span>	}
-<span id="L25" class="ln">    25  </span>	f.contents = contents
-<span id="L26" class="ln">    26  </span>	return nil
-<span id="L27" class="ln">    27  </span>}
-<span id="L28" class="ln">    28  </span>
+<span id="L5" class="ln">     5  </span><span class="comment">// FilePathContents is a flag that reads a file by the passed in path and contains its contents</span>
+<span id="L6" class="ln">     6  </span>type FilePathContents struct {
+<span id="L7" class="ln">     7  </span>	contents []byte
+<span id="L8" class="ln">     8  </span>}
+<span id="L9" class="ln">     9  </span>
+<span id="L10" class="ln">    10  </span><span class="comment">// Contents returns the contents of this flag&#39;s file</span>
+<span id="L11" class="ln">    11  </span>func (f *FilePathContents) Contents() []byte {
+<span id="L12" class="ln">    12  </span>	return f.contents
+<span id="L13" class="ln">    13  </span>}
+<span id="L14" class="ln">    14  </span>
+<span id="L15" class="ln">    15  </span>func (f *FilePathContents) String() string {
+<span id="L16" class="ln">    16  </span>	if f == nil || f.contents == nil {
+<span id="L17" class="ln">    17  </span>		return &#34;&#34;
+<span id="L18" class="ln">    18  </span>	}
+<span id="L19" class="ln">    19  </span>	return string(f.contents)
+<span id="L20" class="ln">    20  </span>}
+<span id="L21" class="ln">    21  </span>
+<span id="L22" class="ln">    22  </span><span class="comment">// Set implements flag.Value</span>
+<span id="L23" class="ln">    23  </span>func (f *FilePathContents) Set(s string) error {
+<span id="L24" class="ln">    24  </span>	contents, err := ioutil.ReadFile(s)
+<span id="L25" class="ln">    25  </span>	if err != nil {
+<span id="L26" class="ln">    26  </span>		return err
+<span id="L27" class="ln">    27  </span>	}
+<span id="L28" class="ln">    28  </span>	f.contents = contents
+<span id="L29" class="ln">    29  </span>	return nil
+<span id="L30" class="ln">    30  </span>}
+<span id="L31" class="ln">    31  </span>
 </pre><p></p>
 
 <div id="footer">
