--- a/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html
@@ -85,15 +85,16 @@
 <span id="L28" class="ln">    28  </span>		return modulePackage, pipe.CheckErrorf(modulePackage == &#34;&#34;, &#34;Unable to find module package name in go.mod file: %s&#34;, goMod)
 <span id="L29" class="ln">    29  </span>	})
 <span id="L30" class="ln">    30  </span>
-<span id="L31" class="ln">    31  </span>func Package(modulePath string) (string, error) {
-<span id="L32" class="ln">    32  </span>	out, err := packagePipe.Do(modulePath)
-<span id="L33" class="ln">    33  </span>	var modulePackage string
-<span id="L34" class="ln">    34  </span>	if err == nil {
-<span id="L35" class="ln">    35  </span>		modulePackage = out[0].(string)
-<span id="L36" class="ln">    36  </span>	}
-<span id="L37" class="ln">    37  </span>	return modulePackage, err
-<span id="L38" class="ln">    38  </span>}
-<span id="L39" class="ln">    39  </span>
+<span id="L31" class="ln">    31  </span><span class="comment">// Package returns a module&#39;s package path for the given module file path</span>
+<span id="L32" class="ln">    32  </span>func Package(modulePath string) (string, error) {
+<span id="L33" class="ln">    33  </span>	out, err := packagePipe.Do(modulePath)
+<span id="L34" class="ln">    34  </span>	var modulePackage string
+<span id="L35" class="ln">    35  </span>	if err == nil {
+<span id="L36" class="ln">    36  </span>		modulePackage = out[0].(string)
+<span id="L37" class="ln">    37  </span>	}
+<span id="L38" class="ln">    38  </span>	return modulePackage, err
+<span id="L39" class="ln">    39  </span>}
+<span id="L40" class="ln">    40  </span>
 </pre><p></p>
 
 <div id="footer">
