--- a/pipe/src/github.com/johnstarich/go/pipe/error_test.go.html
+++ b/pipe/src/github.com/johnstarich/go/pipe/error_test.go.html
@@ -80,7 +80,7 @@
 <span id="L23" class="ln">    23  </span>	isPositive := New(Options{}).
 <span id="L24" class="ln">    24  </span>		Append(func(args []interface{}) (int, error) {
 <span id="L25" class="ln">    25  </span>			in, ok := args[0].(int)
-<span id="L26" class="ln">    26  </span>			return in + 1, CheckError(!ok, fmt.Errorf(&#34;not an int!&#34;))
+<span id="L26" class="ln">    26  </span>			return in + 1, CheckError(!ok, fmt.Errorf(&#34;not an int&#34;))
 <span id="L27" class="ln">    27  </span>		}).
 <span id="L28" class="ln">    28  </span>		Append(func(x int) bool {
 <span id="L29" class="ln">    29  </span>			return x &gt; 0
@@ -88,7 +88,7 @@
 <span id="L31" class="ln">    31  </span>
 <span id="L32" class="ln">    32  </span>	_, err := isPositive.Do([]interface{}{&#34;some string&#34;})
 <span id="L33" class="ln">    33  </span>	fmt.Println(err)
-<span id="L34" class="ln">    34  </span>	<span class="comment">// Output: pipe: not an int!</span>
+<span id="L34" class="ln">    34  </span>	<span class="comment">// Output: pipe: not an int</span>
 <span id="L35" class="ln">    35  </span>}
 <span id="L36" class="ln">    36  </span>
 <span id="L37" class="ln">    37  </span>func TestCheckErrorf(t *testing.T) {
