--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/coverage_status.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/coverage_status.go.html
@@ -70,64 +70,69 @@
 <span id="L13" class="ln">    13  </span>)
 <span id="L14" class="ln">    14  </span>
 <span id="L15" class="ln">    15  </span>func newCoverageStatus(f float64) coverageStatus {
-<span id="L16" class="ln">    16  </span>	switch {
-<span id="L17" class="ln">    17  </span>	case f &lt; 0.50:
-<span id="L18" class="ln">    18  </span>		return coverageError
-<span id="L19" class="ln">    19  </span>	case f &lt; 0.70:
-<span id="L20" class="ln">    20  </span>		return coverageWarning
-<span id="L21" class="ln">    21  </span>	case f &lt; 0.80:
-<span id="L22" class="ln">    22  </span>		return coverageOK
-<span id="L23" class="ln">    23  </span>	case f &lt; 0.90:
-<span id="L24" class="ln">    24  </span>		return coverageGood
-<span id="L25" class="ln">    25  </span>	default:
-<span id="L26" class="ln">    26  </span>		return coverageExcellent
-<span id="L27" class="ln">    27  </span>	}
-<span id="L28" class="ln">    28  </span>}
-<span id="L29" class="ln">    29  </span>
-<span id="L30" class="ln">    30  </span>func (c coverageStatus) WorkflowCommand() string {
-<span id="L31" class="ln">    31  </span>	switch c {
-<span id="L32" class="ln">    32  </span>	case coverageExcellent, coverageGood:
-<span id="L33" class="ln">    33  </span>		return &#34;notice&#34;
-<span id="L34" class="ln">    34  </span>	case coverageOK, coverageWarning:
-<span id="L35" class="ln">    35  </span>		return &#34;warning&#34;
-<span id="L36" class="ln">    36  </span>	default:
-<span id="L37" class="ln">    37  </span>		return &#34;error&#34;
-<span id="L38" class="ln">    38  </span>	}
-<span id="L39" class="ln">    39  </span>}
-<span id="L40" class="ln">    40  </span>
-<span id="L41" class="ln">    41  </span>var (
-<span id="L42" class="ln">    42  </span>	boldGreen = color.New(color.Bold, color.FgGreen)
-<span id="L43" class="ln">    43  </span>	boldRed   = color.New(color.Bold, color.FgRed)
-<span id="L44" class="ln">    44  </span>)
-<span id="L45" class="ln">    45  </span>
-<span id="L46" class="ln">    46  </span>func (c coverageStatus) Colorize(s string) string {
-<span id="L47" class="ln">    47  </span>	switch c {
-<span id="L48" class="ln">    48  </span>	case coverageExcellent:
-<span id="L49" class="ln">    49  </span>		return boldGreen.Sprint(s)
-<span id="L50" class="ln">    50  </span>	case coverageGood:
-<span id="L51" class="ln">    51  </span>		return color.GreenString(s)
-<span id="L52" class="ln">    52  </span>	case coverageOK:
-<span id="L53" class="ln">    53  </span>		return color.YellowString(s)
-<span id="L54" class="ln">    54  </span>	case coverageWarning:
-<span id="L55" class="ln">    55  </span>		return color.RedString(s)
-<span id="L56" class="ln">    56  </span>	default:
-<span id="L57" class="ln">    57  </span>		return boldRed.Sprint(s)
-<span id="L58" class="ln">    58  </span>	}
-<span id="L59" class="ln">    59  </span>}
-<span id="L60" class="ln">    60  </span>
-<span id="L61" class="ln">    61  </span>func (c coverageStatus) Emoji() string {
-<span id="L62" class="ln">    62  </span>	switch c {
-<span id="L63" class="ln">    63  </span>	case coverageExcellent, coverageGood:
-<span id="L64" class="ln">    64  </span>		return &#34;🟢&#34;
-<span id="L65" class="ln">    65  </span>	case coverageOK:
-<span id="L66" class="ln">    66  </span>		return &#34;🟡&#34;
-<span id="L67" class="ln">    67  </span>	case coverageWarning:
-<span id="L68" class="ln">    68  </span>		return &#34;🟠&#34;
-<span id="L69" class="ln">    69  </span>	default:
-<span id="L70" class="ln">    70  </span>		return &#34;🔴&#34;
-<span id="L71" class="ln">    71  </span>	}
-<span id="L72" class="ln">    72  </span>}
-<span id="L73" class="ln">    73  </span>
+<span id="L16" class="ln">    16  </span>	<span class="comment">// nolint:gomnd // These magic numbers are indeed arbitrary thresholds. As long as they are monotonically increasing from 0 to 1, we&#39;re ok.</span>
+<span id="L17" class="ln">    17  </span>	switch {
+<span id="L18" class="ln">    18  </span>	case f &lt; 0.50:
+<span id="L19" class="ln">    19  </span>		return coverageError
+<span id="L20" class="ln">    20  </span>	case f &lt; 0.70:
+<span id="L21" class="ln">    21  </span>		return coverageWarning
+<span id="L22" class="ln">    22  </span>	case f &lt; 0.80:
+<span id="L23" class="ln">    23  </span>		return coverageOK
+<span id="L24" class="ln">    24  </span>	case f &lt; 0.90:
+<span id="L25" class="ln">    25  </span>		return coverageGood
+<span id="L26" class="ln">    26  </span>	default:
+<span id="L27" class="ln">    27  </span>		return coverageExcellent
+<span id="L28" class="ln">    28  </span>	}
+<span id="L29" class="ln">    29  </span>}
+<span id="L30" class="ln">    30  </span>
+<span id="L31" class="ln">    31  </span>func (c coverageStatus) WorkflowCommand() string {
+<span id="L32" class="ln">    32  </span>	switch c {
+<span id="L33" class="ln">    33  </span>	case coverageExcellent, coverageGood:
+<span id="L34" class="ln">    34  </span>		return &#34;notice&#34;
+<span id="L35" class="ln">    35  </span>	case coverageOK, coverageWarning:
+<span id="L36" class="ln">    36  </span>		return &#34;warning&#34;
+<span id="L37" class="ln">    37  </span>	case coverageError:
+<span id="L38" class="ln">    38  </span>		return &#34;error&#34;
+<span id="L39" class="ln">    39  </span>	default:
+<span id="L40" class="ln">    40  </span>		return &#34;error&#34;
+<span id="L41" class="ln">    41  </span>	}
+<span id="L42" class="ln">    42  </span>}
+<span id="L43" class="ln">    43  </span>
+<span id="L44" class="ln">    44  </span>func boldGreen() *color.Color { return color.New(color.Bold, color.FgGreen) }
+<span id="L45" class="ln">    45  </span>func boldRed() *color.Color   { return color.New(color.Bold, color.FgRed) }
+<span id="L46" class="ln">    46  </span>
+<span id="L47" class="ln">    47  </span>func (c coverageStatus) Colorize(s string) string {
+<span id="L48" class="ln">    48  </span>	switch c {
+<span id="L49" class="ln">    49  </span>	case coverageExcellent:
+<span id="L50" class="ln">    50  </span>		return boldGreen().Sprint(s)
+<span id="L51" class="ln">    51  </span>	case coverageGood:
+<span id="L52" class="ln">    52  </span>		return color.GreenString(s)
+<span id="L53" class="ln">    53  </span>	case coverageOK:
+<span id="L54" class="ln">    54  </span>		return color.YellowString(s)
+<span id="L55" class="ln">    55  </span>	case coverageWarning:
+<span id="L56" class="ln">    56  </span>		return color.RedString(s)
+<span id="L57" class="ln">    57  </span>	case coverageError:
+<span id="L58" class="ln">    58  </span>		return boldRed().Sprint(s)
+<span id="L59" class="ln">    59  </span>	default:
+<span id="L60" class="ln">    60  </span>		return boldRed().Sprint(s)
+<span id="L61" class="ln">    61  </span>	}
+<span id="L62" class="ln">    62  </span>}
+<span id="L63" class="ln">    63  </span>
+<span id="L64" class="ln">    64  </span>func (c coverageStatus) Emoji() string {
+<span id="L65" class="ln">    65  </span>	switch c {
+<span id="L66" class="ln">    66  </span>	case coverageExcellent, coverageGood:
+<span id="L67" class="ln">    67  </span>		return &#34;🟢&#34;
+<span id="L68" class="ln">    68  </span>	case coverageOK:
+<span id="L69" class="ln">    69  </span>		return &#34;🟡&#34;
+<span id="L70" class="ln">    70  </span>	case coverageWarning:
+<span id="L71" class="ln">    71  </span>		return &#34;🟠&#34;
+<span id="L72" class="ln">    72  </span>	case coverageError:
+<span id="L73" class="ln">    73  </span>		return &#34;🔴&#34;
+<span id="L74" class="ln">    74  </span>	default:
+<span id="L75" class="ln">    75  </span>		return &#34;🔴&#34;
+<span id="L76" class="ln">    76  </span>	}
+<span id="L77" class="ln">    77  </span>}
+<span id="L78" class="ln">    78  </span>
 </pre><p></p>
 
 <div id="footer">
