--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/github_actions.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/github_actions.go.html
@@ -66,7 +66,7 @@
 <span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/covet/internal/span&#34;
 <span id="L10" class="ln">    10  </span>)
 <span id="L11" class="ln">    11  </span>
-<span id="L12" class="ln">    12  </span>var inGitHubActions = os.Getenv(&#34;GITHUB_ACTIONS&#34;) == &#34;true&#34;
+<span id="L12" class="ln">    12  </span>func inGitHubActions() bool { return os.Getenv(&#34;GITHUB_ACTIONS&#34;) == &#34;true&#34; }
 <span id="L13" class="ln">    13  </span>
 <span id="L14" class="ln">    14  </span>func workflowCommand(command, message string, args map[string]string) string {
 <span id="L15" class="ln">    15  </span>	var sb strings.Builder
@@ -117,14 +117,14 @@
 <span id="L60" class="ln">    60  </span>}
 <span id="L61" class="ln">    61  </span>
 <span id="L62" class="ln">    62  </span>func runWorkflow(s string) {
-<span id="L63" class="ln">    63  </span>	if inGitHubActions {
+<span id="L63" class="ln">    63  </span>	if inGitHubActions() {
 <span id="L64" class="ln">    64  </span>		fmt.Println(s)
 <span id="L65" class="ln">    65  </span>	}
 <span id="L66" class="ln">    66  </span>}
 <span id="L67" class="ln">    67  </span>
 <span id="L68" class="ln">    68  </span>func coverageCommand(percent float64, file string, uncovered []span.Span) string {
 <span id="L69" class="ln">    69  </span>	status := newCoverageStatus(percent)
-<span id="L70" class="ln">    70  </span>	message := fmt.Sprintf(&#34;Diff coverage is %.1f%%&#34;, 100*percent)
+<span id="L70" class="ln">    70  </span>	message := fmt.Sprintf(&#34;Diff coverage is %.1f%%&#34;, maxPercentInt*percent)
 <span id="L71" class="ln">    71  </span>	args := map[string]string{
 <span id="L72" class="ln">    72  </span>		&#34;title&#34;: &#34;covet&#34;,
 <span id="L73" class="ln">    73  </span>	}
@@ -133,7 +133,7 @@
 <span id="L76" class="ln">    76  </span>	}
 <span id="L77" class="ln">    77  </span>	if len(uncovered) &gt; 0 {
 <span id="L78" class="ln">    78  </span>		first := uncovered[0]
-<span id="L79" class="ln">    79  </span>		args[&#34;title&#34;] = fmt.Sprintf(&#34;Not enough tests on %s. (-%.1f%%)&#34;, file, 100*(1-percent))
+<span id="L79" class="ln">    79  </span>		args[&#34;title&#34;] = fmt.Sprintf(&#34;Not enough tests on %s. (-%.1f%%)&#34;, file, maxPercentInt*(1-percent))
 <span id="L80" class="ln">    80  </span>		args[&#34;line&#34;] = fmt.Sprintf(&#34;%d&#34;, first.Start)
 <span id="L81" class="ln">    81  </span>		args[&#34;endLine&#34;] = fmt.Sprintf(&#34;%d&#34;, first.End-1)
 <span id="L82" class="ln">    82  </span>		message = &#34;&#34;
