--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/main.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/main.go.html
@@ -68,36 +68,37 @@
 <span id="L11" class="ln">    11  </span>	osfs &#34;github.com/hack-pad/hackpadfs/os&#34;
 <span id="L12" class="ln">    12  </span>)
 <span id="L13" class="ln">    13  </span>
-<span id="L14" class="ln">    14  </span>var (
-<span id="L15" class="ln">    15  </span>	osExiter            = os.Exit
-<span id="L16" class="ln">    16  </span>	osErr     io.Writer = os.Stderr
-<span id="L17" class="ln">    17  </span>	colorOnce sync.Once
-<span id="L18" class="ln">    18  </span>)
-<span id="L19" class="ln">    19  </span>
-<span id="L20" class="ln">    20  </span>func setColorOnce(shouldColor bool) {
-<span id="L21" class="ln">    21  </span>	colorOnce.Do(func() {
-<span id="L22" class="ln">    22  </span>		color.NoColor = !shouldColor
-<span id="L23" class="ln">    23  </span>	})
-<span id="L24" class="ln">    24  </span>}
-<span id="L25" class="ln">    25  </span>
-<span id="L26" class="ln">    26  </span>func main() {
-<span id="L27" class="ln">    27  </span>	if os.Getenv(&#34;CI&#34;) == &#34;true&#34; {
-<span id="L28" class="ln">    28  </span>		setColorOnce(true)
-<span id="L29" class="ln">    29  </span>	}
-<span id="L30" class="ln">    30  </span>	err := run(
-<span id="L31" class="ln">    31  </span>		os.Args[1:],
-<span id="L32" class="ln">    32  </span>		os.Stdin,
-<span id="L33" class="ln">    33  </span>		os.Stdout,
-<span id="L34" class="ln">    34  </span>		osErr,
-<span id="L35" class="ln">    35  </span>		osfs.NewFS(),
-<span id="L36" class="ln">    36  </span>	)
-<span id="L37" class="ln">    37  </span>	if err != nil {
-<span id="L38" class="ln">    38  </span>		fmt.Fprintln(osErr, err)
-<span id="L39" class="ln">    39  </span>		osExiter(1)
-<span id="L40" class="ln">    40  </span>		return
-<span id="L41" class="ln">    41  </span>	}
-<span id="L42" class="ln">    42  </span>}
-<span id="L43" class="ln">    43  </span>
+<span id="L14" class="ln">    14  </span><span class="comment">// nolint:gochecknoglobals // These globals are required to handle pre-existing globals in other libraries. Access to them is tightly controlled and minimized.</span>
+<span id="L15" class="ln">    15  </span>var (
+<span id="L16" class="ln">    16  </span>	osExiter            = os.Exit
+<span id="L17" class="ln">    17  </span>	osErr     io.Writer = os.Stderr
+<span id="L18" class="ln">    18  </span>	colorOnce sync.Once
+<span id="L19" class="ln">    19  </span>)
+<span id="L20" class="ln">    20  </span>
+<span id="L21" class="ln">    21  </span>func setColorOnce(shouldColor bool) {
+<span id="L22" class="ln">    22  </span>	colorOnce.Do(func() {
+<span id="L23" class="ln">    23  </span>		color.NoColor = !shouldColor
+<span id="L24" class="ln">    24  </span>	})
+<span id="L25" class="ln">    25  </span>}
+<span id="L26" class="ln">    26  </span>
+<span id="L27" class="ln">    27  </span>func main() {
+<span id="L28" class="ln">    28  </span>	if os.Getenv(&#34;CI&#34;) == &#34;true&#34; {
+<span id="L29" class="ln">    29  </span>		setColorOnce(true)
+<span id="L30" class="ln">    30  </span>	}
+<span id="L31" class="ln">    31  </span>	err := run(
+<span id="L32" class="ln">    32  </span>		os.Args[1:],
+<span id="L33" class="ln">    33  </span>		os.Stdin,
+<span id="L34" class="ln">    34  </span>		os.Stdout,
+<span id="L35" class="ln">    35  </span>		osErr,
+<span id="L36" class="ln">    36  </span>		osfs.NewFS(),
+<span id="L37" class="ln">    37  </span>	)
+<span id="L38" class="ln">    38  </span>	if err != nil {
+<span id="L39" class="ln">    39  </span>		fmt.Fprintln(osErr, err)
+<span id="L40" class="ln">    40  </span>		osExiter(1)
+<span id="L41" class="ln">    41  </span>		return
+<span id="L42" class="ln">    42  </span>	}
+<span id="L43" class="ln">    43  </span>}
+<span id="L44" class="ln">    44  </span>
 </pre><p></p>
 
 <div id="footer">
