--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/main_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/main_test.go.html
@@ -60,39 +60,42 @@
 <span id="L3" class="ln">     3  </span>import (
 <span id="L4" class="ln">     4  </span>	&#34;bytes&#34;
 <span id="L5" class="ln">     5  </span>	&#34;io&#34;
-<span id="L6" class="ln">     6  </span>	&#34;testing&#34;
-<span id="L7" class="ln">     7  </span>
-<span id="L8" class="ln">     8  </span>	&#34;github.com/pkg/errors&#34;
-<span id="L9" class="ln">     9  </span>	&#34;github.com/stretchr/testify/assert&#34;
-<span id="L10" class="ln">    10  </span>	&#34;github.com/stretchr/testify/require&#34;
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span>func init() {
-<span id="L14" class="ln">    14  </span>	osErr = bytes.NewBuffer(nil)
-<span id="L15" class="ln">    15  </span>	osExiter = func(code int) {
-<span id="L16" class="ln">    16  </span>		buf := osErr.(*bytes.Buffer)
-<span id="L17" class="ln">    17  </span>		bytes, _ := io.ReadAll(buf)
-<span id="L18" class="ln">    18  </span>		err := errors.New(string(bytes))
-<span id="L19" class="ln">    19  </span>		panic(errors.Wrapf(err, &#34;exited with code %d and output&#34;, code))
-<span id="L20" class="ln">    20  </span>	}
-<span id="L21" class="ln">    21  </span>}
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>func TestMain(t *testing.T) {
-<span id="L24" class="ln">    24  </span>	handlePanic(t, main, func(v interface{}) {
-<span id="L25" class="ln">    25  </span>		require.Implements(t, (*error)(nil), v)
-<span id="L26" class="ln">    26  </span>		err := v.(error)
-<span id="L27" class="ln">    27  </span>		assert.ErrorContains(t, err, &#34;exited with code 1&#34;)
-<span id="L28" class="ln">    28  </span>	})
-<span id="L29" class="ln">    29  </span>}
-<span id="L30" class="ln">    30  </span>
-<span id="L31" class="ln">    31  </span>func handlePanic(t *testing.T, fn func(), handler func(v interface{})) {
-<span id="L32" class="ln">    32  </span>	t.Helper()
-<span id="L33" class="ln">    33  </span>	defer func() {
-<span id="L34" class="ln">    34  </span>		handler(recover())
-<span id="L35" class="ln">    35  </span>	}()
-<span id="L36" class="ln">    36  </span>	fn()
-<span id="L37" class="ln">    37  </span>}
-<span id="L38" class="ln">    38  </span>
+<span id="L6" class="ln">     6  </span>	&#34;os&#34;
+<span id="L7" class="ln">     7  </span>	&#34;testing&#34;
+<span id="L8" class="ln">     8  </span>
+<span id="L9" class="ln">     9  </span>	&#34;github.com/pkg/errors&#34;
+<span id="L10" class="ln">    10  </span>	&#34;github.com/stretchr/testify/assert&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L12" class="ln">    12  </span>)
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span>func TestMain(m *testing.M) {
+<span id="L15" class="ln">    15  </span>	osErr = bytes.NewBuffer(nil)
+<span id="L16" class="ln">    16  </span>	osExiter = func(code int) {
+<span id="L17" class="ln">    17  </span>		buf := osErr.(*bytes.Buffer)
+<span id="L18" class="ln">    18  </span>		bytes, _ := io.ReadAll(buf)
+<span id="L19" class="ln">    19  </span>		err := errors.New(string(bytes))
+<span id="L20" class="ln">    20  </span>		panic(errors.Wrapf(err, &#34;exited with code %d and output&#34;, code))
+<span id="L21" class="ln">    21  </span>	}
+<span id="L22" class="ln">    22  </span>	setColorOnce(false)
+<span id="L23" class="ln">    23  </span>	os.Exit(m.Run())
+<span id="L24" class="ln">    24  </span>}
+<span id="L25" class="ln">    25  </span>
+<span id="L26" class="ln">    26  </span>func TestRunMain(t *testing.T) {
+<span id="L27" class="ln">    27  </span>	handlePanic(t, main, func(v interface{}) {
+<span id="L28" class="ln">    28  </span>		require.Implements(t, (*error)(nil), v)
+<span id="L29" class="ln">    29  </span>		err := v.(error)
+<span id="L30" class="ln">    30  </span>		assert.ErrorContains(t, err, &#34;exited with code 1&#34;)
+<span id="L31" class="ln">    31  </span>	})
+<span id="L32" class="ln">    32  </span>}
+<span id="L33" class="ln">    33  </span>
+<span id="L34" class="ln">    34  </span>func handlePanic(t *testing.T, fn func(), handler func(v interface{})) {
+<span id="L35" class="ln">    35  </span>	t.Helper()
+<span id="L36" class="ln">    36  </span>	defer func() {
+<span id="L37" class="ln">    37  </span>		handler(recover())
+<span id="L38" class="ln">    38  </span>	}()
+<span id="L39" class="ln">    39  </span>	fn()
+<span id="L40" class="ln">    40  </span>}
+<span id="L41" class="ln">    41  </span>
 </pre><p></p>
 
 <div id="footer">
