--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/summary.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/summary.go.html
@@ -90,125 +90,121 @@
 <span id="L33" class="ln">    33  </span>}
 <span id="L34" class="ln">    34  </span>
 <span id="L35" class="ln">    35  </span>func (f summaryFormat) FormatTable(tbl table.Writer) string {
-<span id="L36" class="ln">    36  </span>	switch f {
-<span id="L37" class="ln">    37  </span>	case summaryMarkdown:
-<span id="L38" class="ln">    38  </span>		return tbl.RenderMarkdown()
-<span id="L39" class="ln">    39  </span>	default:
-<span id="L40" class="ln">    40  </span>		tbl.SetStyle(table.StyleLight)
-<span id="L41" class="ln">    41  </span>		return tbl.Render()
-<span id="L42" class="ln">    42  </span>	}
-<span id="L43" class="ln">    43  </span>}
-<span id="L44" class="ln">    44  </span>
-<span id="L45" class="ln">    45  </span>func (f summaryFormat) Monospace(s string) string {
-<span id="L46" class="ln">    46  </span>	const nonBreakingSpace = &#34; &#34; <span class="comment">// ASCII 255, non-breaking space</span>
-<span id="L47" class="ln">    47  </span>	switch f {
-<span id="L48" class="ln">    48  </span>	case summaryMarkdown:
-<span id="L49" class="ln">    49  </span>		s = strings.ReplaceAll(s, &#34; &#34;, nonBreakingSpace)
-<span id="L50" class="ln">    50  </span>		return fmt.Sprintf(&#34;``%s``&#34;, s)
-<span id="L51" class="ln">    51  </span>	default:
-<span id="L52" class="ln">    52  </span>		return s
-<span id="L53" class="ln">    53  </span>	}
-<span id="L54" class="ln">    54  </span>}
-<span id="L55" class="ln">    55  </span>
-<span id="L56" class="ln">    56  </span>func (f summaryFormat) StatusIcon(status coverageStatus) string {
-<span id="L57" class="ln">    57  </span>	switch f {
-<span id="L58" class="ln">    58  </span>	case summaryMarkdown:
-<span id="L59" class="ln">    59  </span>		return status.Emoji()
-<span id="L60" class="ln">    60  </span>	default:
-<span id="L61" class="ln">    61  </span>		return &#34;&#34;
+<span id="L36" class="ln">    36  </span>	if f == summaryMarkdown {
+<span id="L37" class="ln">    37  </span>		return tbl.RenderMarkdown()
+<span id="L38" class="ln">    38  </span>	}
+<span id="L39" class="ln">    39  </span>	tbl.SetStyle(table.StyleLight)
+<span id="L40" class="ln">    40  </span>	return tbl.Render()
+<span id="L41" class="ln">    41  </span>}
+<span id="L42" class="ln">    42  </span>
+<span id="L43" class="ln">    43  </span>func (f summaryFormat) Monospace(s string) string {
+<span id="L44" class="ln">    44  </span>	const nonBreakingSpace = &#34; &#34; <span class="comment">// ASCII 255, non-breaking space</span>
+<span id="L45" class="ln">    45  </span>	if f == summaryMarkdown {
+<span id="L46" class="ln">    46  </span>		s = strings.ReplaceAll(s, &#34; &#34;, nonBreakingSpace)
+<span id="L47" class="ln">    47  </span>		return fmt.Sprintf(&#34;``%s``&#34;, s)
+<span id="L48" class="ln">    48  </span>	}
+<span id="L49" class="ln">    49  </span>	return s
+<span id="L50" class="ln">    50  </span>}
+<span id="L51" class="ln">    51  </span>
+<span id="L52" class="ln">    52  </span>func (f summaryFormat) StatusIcon(status coverageStatus) string {
+<span id="L53" class="ln">    53  </span>	if f == summaryMarkdown {
+<span id="L54" class="ln">    54  </span>		return status.Emoji()
+<span id="L55" class="ln">    55  </span>	}
+<span id="L56" class="ln">    56  </span>	return &#34;&#34;
+<span id="L57" class="ln">    57  </span>}
+<span id="L58" class="ln">    58  </span>
+<span id="L59" class="ln">    59  </span>func covetSummary(uncoveredFiles []covet.File, targetCoverage uint, format summaryFormat) string {
+<span id="L60" class="ln">    60  </span>	if len(uncoveredFiles) == 0 {
+<span id="L61" class="ln">    61  </span>		return fmt.Sprintf(&#34;Successfully reached diff coverage target: &gt;%d%%\n&#34;, targetCoverage)
 <span id="L62" class="ln">    62  </span>	}
-<span id="L63" class="ln">    63  </span>}
-<span id="L64" class="ln">    64  </span>
-<span id="L65" class="ln">    65  </span>func covetSummary(uncoveredFiles []covet.File, targetCoverage uint, format summaryFormat) string {
-<span id="L66" class="ln">    66  </span>	if len(uncoveredFiles) == 0 {
-<span id="L67" class="ln">    67  </span>		return fmt.Sprintf(&#34;Successfully reached diff coverage target: &gt;%d%%\n&#34;, targetCoverage)
-<span id="L68" class="ln">    68  </span>	}
-<span id="L69" class="ln">    69  </span>
-<span id="L70" class="ln">    70  </span>	var sb strings.Builder
-<span id="L71" class="ln">    71  </span>	sb.WriteString(&#34;Diff coverage is below target. Add tests for these files:\n&#34;)
-<span id="L72" class="ln">    72  </span>	tbl := table.NewWriter()
-<span id="L73" class="ln">    73  </span>	tbl.SetColumnConfigs([]table.ColumnConfig{
-<span id="L74" class="ln">    74  </span>		{Number: 2, Align: text.AlignCenter},
-<span id="L75" class="ln">    75  </span>	})
-<span id="L76" class="ln">    76  </span>	tbl.SuppressEmptyColumns()
-<span id="L77" class="ln">    77  </span>	tbl.AppendHeader(table.Row{
-<span id="L78" class="ln">    78  </span>		&#34;&#34;,
-<span id="L79" class="ln">    79  </span>		format.Colorize(boldColor, &#34;Lines&#34;),
-<span id="L80" class="ln">    80  </span>		format.Colorize(boldColor, &#34;Coverage&#34;),
-<span id="L81" class="ln">    81  </span>		format.Colorize(boldColor, &#34;File&#34;),
-<span id="L82" class="ln">    82  </span>	})
-<span id="L83" class="ln">    83  </span>	for _, f := range uncoveredFiles {
-<span id="L84" class="ln">    84  </span>		percent := coveredFile(f)
-<span id="L85" class="ln">    85  </span>		status := newCoverageStatus(percent)
-<span id="L86" class="ln">    86  </span>		tbl.AppendRow(table.Row{
-<span id="L87" class="ln">    87  </span>			format.StatusIcon(status),
-<span id="L88" class="ln">    88  </span>			format.ColorizeStatus(status, format.Monospace(formatFraction(f.Covered, f.Uncovered+f.Covered))),
-<span id="L89" class="ln">    89  </span>			format.ColorizeStatus(status, format.Monospace(formatPercent(percent)+&#34; &#34;+formatGraph(percent, format))),
-<span id="L90" class="ln">    90  </span>			f.Name,
-<span id="L91" class="ln">    91  </span>		})
-<span id="L92" class="ln">    92  </span>	}
-<span id="L93" class="ln">    93  </span>	sb.WriteString(format.FormatTable(tbl))
-<span id="L94" class="ln">    94  </span>	sb.WriteRune(&#39;\n&#39;)
-<span id="L95" class="ln">    95  </span>	return sb.String()
+<span id="L63" class="ln">    63  </span>
+<span id="L64" class="ln">    64  </span>	var sb strings.Builder
+<span id="L65" class="ln">    65  </span>	sb.WriteString(&#34;Diff coverage is below target. Add tests for these files:\n&#34;)
+<span id="L66" class="ln">    66  </span>	tbl := table.NewWriter()
+<span id="L67" class="ln">    67  </span>	const coverageColumnIndex = 2
+<span id="L68" class="ln">    68  </span>	tbl.SetColumnConfigs([]table.ColumnConfig{
+<span id="L69" class="ln">    69  </span>		{Number: coverageColumnIndex, Align: text.AlignCenter},
+<span id="L70" class="ln">    70  </span>	})
+<span id="L71" class="ln">    71  </span>	tbl.SuppressEmptyColumns()
+<span id="L72" class="ln">    72  </span>	bold := boldColor()
+<span id="L73" class="ln">    73  </span>	tbl.AppendHeader(table.Row{
+<span id="L74" class="ln">    74  </span>		&#34;&#34;,
+<span id="L75" class="ln">    75  </span>		format.Colorize(bold, &#34;Lines&#34;),
+<span id="L76" class="ln">    76  </span>		format.Colorize(bold, &#34;Coverage&#34;),
+<span id="L77" class="ln">    77  </span>		format.Colorize(bold, &#34;File&#34;),
+<span id="L78" class="ln">    78  </span>	})
+<span id="L79" class="ln">    79  </span>	for _, f := range uncoveredFiles {
+<span id="L80" class="ln">    80  </span>		percent := coveredFile(f)
+<span id="L81" class="ln">    81  </span>		status := newCoverageStatus(percent)
+<span id="L82" class="ln">    82  </span>		tbl.AppendRow(table.Row{
+<span id="L83" class="ln">    83  </span>			format.StatusIcon(status),
+<span id="L84" class="ln">    84  </span>			format.ColorizeStatus(status, format.Monospace(formatFraction(f.Covered, f.Uncovered+f.Covered))),
+<span id="L85" class="ln">    85  </span>			format.ColorizeStatus(status, format.Monospace(formatPercent(percent)+&#34; &#34;+formatGraph(percent, format))),
+<span id="L86" class="ln">    86  </span>			f.Name,
+<span id="L87" class="ln">    87  </span>		})
+<span id="L88" class="ln">    88  </span>	}
+<span id="L89" class="ln">    89  </span>	sb.WriteString(format.FormatTable(tbl))
+<span id="L90" class="ln">    90  </span>	sb.WriteRune(&#39;\n&#39;)
+<span id="L91" class="ln">    91  </span>	return sb.String()
+<span id="L92" class="ln">    92  </span>}
+<span id="L93" class="ln">    93  </span>
+<span id="L94" class="ln">    94  </span>func formatWidth(s string, width uint) string {
+<span id="L95" class="ln">    95  </span>	return fmt.Sprintf(fmt.Sprintf(&#34;%%%ds&#34;, width), s)
 <span id="L96" class="ln">    96  </span>}
 <span id="L97" class="ln">    97  </span>
-<span id="L98" class="ln">    98  </span>func formatWidth(s string, width uint) string {
-<span id="L99" class="ln">    99  </span>	return fmt.Sprintf(fmt.Sprintf(&#34;%%%ds&#34;, width), s)
+<span id="L98" class="ln">    98  </span>func formatWidthLeft(s string, width uint) string {
+<span id="L99" class="ln">    99  </span>	return fmt.Sprintf(fmt.Sprintf(&#34;%%-%ds&#34;, width), s)
 <span id="L100" class="ln">   100  </span>}
 <span id="L101" class="ln">   101  </span>
-<span id="L102" class="ln">   102  </span>func formatWidthLeft(s string, width uint) string {
-<span id="L103" class="ln">   103  </span>	return fmt.Sprintf(fmt.Sprintf(&#34;%%-%ds&#34;, width), s)
-<span id="L104" class="ln">   104  </span>}
-<span id="L105" class="ln">   105  </span>
-<span id="L106" class="ln">   106  </span>func formatFraction(numerator, denominator uint) string {
-<span id="L107" class="ln">   107  </span>	nStr := fmt.Sprintf(&#34;%d&#34;, numerator)
-<span id="L108" class="ln">   108  </span>	dStr := fmt.Sprintf(&#34;%d&#34;, denominator)
-<span id="L109" class="ln">   109  </span>	width := uint(minmax.MaxInt(len(nStr), len(dStr)))
-<span id="L110" class="ln">   110  </span>	return fmt.Sprintf(&#34;%s/%s&#34;, formatWidth(nStr, width), formatWidthLeft(dStr, width))
+<span id="L102" class="ln">   102  </span>func formatFraction(numerator, denominator uint) string {
+<span id="L103" class="ln">   103  </span>	nStr := fmt.Sprintf(&#34;%d&#34;, numerator)
+<span id="L104" class="ln">   104  </span>	dStr := fmt.Sprintf(&#34;%d&#34;, denominator)
+<span id="L105" class="ln">   105  </span>	width := uint(minmax.MaxInt(len(nStr), len(dStr)))
+<span id="L106" class="ln">   106  </span>	return fmt.Sprintf(&#34;%s/%s&#34;, formatWidth(nStr, width), formatWidthLeft(dStr, width))
+<span id="L107" class="ln">   107  </span>}
+<span id="L108" class="ln">   108  </span>
+<span id="L109" class="ln">   109  </span>func formatPercent(f float64) string {
+<span id="L110" class="ln">   110  </span>	return fmt.Sprintf(&#34;%5.1f%%&#34;, maxPercentInt*f)
 <span id="L111" class="ln">   111  </span>}
 <span id="L112" class="ln">   112  </span>
-<span id="L113" class="ln">   113  </span>func formatPercent(f float64) string {
-<span id="L114" class="ln">   114  </span>	return fmt.Sprintf(&#34;%5.1f%%&#34;, 100*f)
-<span id="L115" class="ln">   115  </span>}
-<span id="L116" class="ln">   116  </span>
-<span id="L117" class="ln">   117  </span>func formatGraph(f float64, format summaryFormat) string {
-<span id="L118" class="ln">   118  </span>	const (
-<span id="L119" class="ln">   119  </span>		graphWidth    = 5
-<span id="L120" class="ln">   120  </span>		graphTickSize = 1.0 / graphWidth
-<span id="L121" class="ln">   121  </span>	)
-<span id="L122" class="ln">   122  </span>	total := graphWidth
-<span id="L123" class="ln">   123  </span>	var graph strings.Builder
-<span id="L124" class="ln">   124  </span>	if f == 0 {
-<span id="L125" class="ln">   125  </span>		graph.WriteRune(percentRune(0))
-<span id="L126" class="ln">   126  </span>		total--
-<span id="L127" class="ln">   127  </span>	}
-<span id="L128" class="ln">   128  </span>	for f &gt; 0 {
-<span id="L129" class="ln">   129  </span>		graph.WriteRune(percentRune(f / graphTickSize))
-<span id="L130" class="ln">   130  </span>		f -= graphTickSize
+<span id="L113" class="ln">   113  </span>func formatGraph(f float64, format summaryFormat) string {
+<span id="L114" class="ln">   114  </span>	const (
+<span id="L115" class="ln">   115  </span>		graphWidth    = 5
+<span id="L116" class="ln">   116  </span>		graphTickSize = 1.0 / graphWidth
+<span id="L117" class="ln">   117  </span>	)
+<span id="L118" class="ln">   118  </span>	total := graphWidth
+<span id="L119" class="ln">   119  </span>	var graph strings.Builder
+<span id="L120" class="ln">   120  </span>	if f == 0 {
+<span id="L121" class="ln">   121  </span>		graph.WriteRune(percentRune(0))
+<span id="L122" class="ln">   122  </span>		total--
+<span id="L123" class="ln">   123  </span>	}
+<span id="L124" class="ln">   124  </span>	for f &gt; 0 {
+<span id="L125" class="ln">   125  </span>		graph.WriteRune(percentRune(f / graphTickSize))
+<span id="L126" class="ln">   126  </span>		f -= graphTickSize
+<span id="L127" class="ln">   127  </span>		total--
+<span id="L128" class="ln">   128  </span>	}
+<span id="L129" class="ln">   129  </span>	for total &gt; 0 {
+<span id="L130" class="ln">   130  </span>		graph.WriteRune(&#39; &#39;)
 <span id="L131" class="ln">   131  </span>		total--
 <span id="L132" class="ln">   132  </span>	}
-<span id="L133" class="ln">   133  </span>	for total &gt; 0 {
-<span id="L134" class="ln">   134  </span>		graph.WriteRune(&#39; &#39;)
-<span id="L135" class="ln">   135  </span>		total--
-<span id="L136" class="ln">   136  </span>	}
-<span id="L137" class="ln">   137  </span>	return format.Colorize(boldColor, graph.String())
-<span id="L138" class="ln">   138  </span>}
-<span id="L139" class="ln">   139  </span>
-<span id="L140" class="ln">   140  </span>func percentRune(f float64) rune {
-<span id="L141" class="ln">   141  </span>	if f &gt; 1 {
-<span id="L142" class="ln">   142  </span>		f = 1
-<span id="L143" class="ln">   143  </span>	}
-<span id="L144" class="ln">   144  </span>	if f &lt; 0 {
-<span id="L145" class="ln">   145  </span>		f = 0
-<span id="L146" class="ln">   146  </span>	}
-<span id="L147" class="ln">   147  </span>	const (
-<span id="L148" class="ln">   148  </span>		runeTicks = 7 <span class="comment">// 8 increments - 1st base rune</span>
-<span id="L149" class="ln">   149  </span>		baseRune  = &#39;█&#39;
-<span id="L150" class="ln">   150  </span>	)
-<span id="L151" class="ln">   151  </span>	unicodeOffset := runeTicks - int(f*runeTicks)
-<span id="L152" class="ln">   152  </span>	return rune(baseRune + unicodeOffset)
-<span id="L153" class="ln">   153  </span>}
-<span id="L154" class="ln">   154  </span>
+<span id="L133" class="ln">   133  </span>	return format.Colorize(boldColor(), graph.String())
+<span id="L134" class="ln">   134  </span>}
+<span id="L135" class="ln">   135  </span>
+<span id="L136" class="ln">   136  </span>func percentRune(f float64) rune {
+<span id="L137" class="ln">   137  </span>	if f &gt; 1 {
+<span id="L138" class="ln">   138  </span>		f = 1
+<span id="L139" class="ln">   139  </span>	}
+<span id="L140" class="ln">   140  </span>	if f &lt; 0 {
+<span id="L141" class="ln">   141  </span>		f = 0
+<span id="L142" class="ln">   142  </span>	}
+<span id="L143" class="ln">   143  </span>	const (
+<span id="L144" class="ln">   144  </span>		runeTicks = 7 <span class="comment">// 8 increments - 1st base rune</span>
+<span id="L145" class="ln">   145  </span>		baseRune  = &#39;█&#39;
+<span id="L146" class="ln">   146  </span>	)
+<span id="L147" class="ln">   147  </span>	unicodeOffset := runeTicks - int(f*runeTicks)
+<span id="L148" class="ln">   148  </span>	return rune(baseRune + unicodeOffset)
+<span id="L149" class="ln">   149  </span>}
+<span id="L150" class="ln">   150  </span>
 </pre><p></p>
 
 <div id="footer">
