--- a/covet/src/github.com/johnstarich/go/covet/internal/packages/packages.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/packages/packages.go.html
@@ -111,132 +111,133 @@
 <span id="L54" class="ln">    54  </span>		panicIfErr(err)
 <span id="L55" class="ln">    55  </span>		setErr(mountFS.AddMount(tempDir, memFS), &amp;sErr)
 <span id="L56" class="ln">    56  </span>		moduleGoPath := path.Join(&#34;src&#34;, moduleName)
-<span id="L57" class="ln">    57  </span>		setErr(memFS.MkdirAll(moduleGoPath, 0700), &amp;sErr)
-<span id="L58" class="ln">    58  </span>		moduleFS, err := hackpadfs.Sub(mountFS, moduleDir)
-<span id="L59" class="ln">    59  </span>		if err != nil {
-<span id="L60" class="ln">    60  </span>			return &#34;&#34;, err
-<span id="L61" class="ln">    61  </span>		}
-<span id="L62" class="ln">    62  </span>		setErr(mountFS.AddMount(path.Join(tempDir, moduleGoPath), moduleFS), &amp;sErr) <span class="comment">// &#34;symlink&#34; original fs inside the new GOPATH-like directory</span>
-<span id="L63" class="ln">    63  </span>		workDirSubPath := strings.TrimPrefix(workingDirectory, moduleDir)
-<span id="L64" class="ln">    64  </span>		workDirSubPath = strings.TrimPrefix(workDirSubPath, &#34;/&#34;)
-<span id="L65" class="ln">    65  </span>		trimDir = path.Join(tempDir, moduleGoPath, workDirSubPath)
-<span id="L66" class="ln">    66  </span>	}
-<span id="L67" class="ln">    67  </span>
-<span id="L68" class="ln">    68  </span>	packageName, coverageFile := path.Split(filePattern)
-<span id="L69" class="ln">    69  </span>	ctx := newFSBuildContext(mountFS, workingDirectory, options)
-<span id="L70" class="ln">    70  </span>	pkg, err := ctx.Import(packageName, workingDirectory, build.FindOnly)
-<span id="L71" class="ln">    71  </span>	setErr(err, &amp;sErr)
-<span id="L72" class="ln">    72  </span>	coverageFile = path.Join(pkg.Dir, coverageFile)
-<span id="L73" class="ln">    73  </span>	coverageFile = strings.TrimPrefix(coverageFile, trimDir+&#34;/&#34;)
-<span id="L74" class="ln">    74  </span>	return coverageFile, sErr
-<span id="L75" class="ln">    75  </span>}
-<span id="L76" class="ln">    76  </span>
-<span id="L77" class="ln">    77  </span>func panicIfErr(err error) {
-<span id="L78" class="ln">    78  </span>	if err != nil {
-<span id="L79" class="ln">    79  </span>		panic(err)
-<span id="L80" class="ln">    80  </span>	}
-<span id="L81" class="ln">    81  </span>}
-<span id="L82" class="ln">    82  </span>
-<span id="L83" class="ln">    83  </span>func setErr(err error, setErr *error) {
-<span id="L84" class="ln">    84  </span>	if err != nil &amp;&amp; *setErr == nil {
-<span id="L85" class="ln">    85  </span>		*setErr = err
-<span id="L86" class="ln">    86  </span>	}
-<span id="L87" class="ln">    87  </span>}
-<span id="L88" class="ln">    88  </span>
-<span id="L89" class="ln">    89  </span>func makePathList(elems ...[]string) string {
-<span id="L90" class="ln">    90  </span>	var allElems []string
-<span id="L91" class="ln">    91  </span>	for _, e := range elems {
-<span id="L92" class="ln">    92  </span>		allElems = append(allElems, e...)
-<span id="L93" class="ln">    93  </span>	}
-<span id="L94" class="ln">    94  </span>	return strings.Join(allElems, string(filepath.ListSeparator))
-<span id="L95" class="ln">    95  </span>}
-<span id="L96" class="ln">    96  </span>
-<span id="L97" class="ln">    97  </span>func newFSBuildContext(fs hackpadfs.FS, workingDirectory string, options Options) build.Context {
-<span id="L98" class="ln">    98  </span>	ctx := build.Default
-<span id="L99" class="ln">    99  </span>	ctx.GOROOT = options.GoRoot
-<span id="L100" class="ln">   100  </span>	ctx.GOPATH = options.GoPath
-<span id="L101" class="ln">   101  </span>	ctx.JoinPath = path.Join
-<span id="L102" class="ln">   102  </span>	ctx.SplitPathList = filepath.SplitList
-<span id="L103" class="ln">   103  </span>	ctx.IsAbsPath = func(path string) bool {
-<span id="L104" class="ln">   104  </span>		return !build.IsLocalImport(path)
-<span id="L105" class="ln">   105  </span>	}
-<span id="L106" class="ln">   106  </span>	ctx.IsDir = func(path string) bool {
-<span id="L107" class="ln">   107  </span>		info, err := hackpadfs.Stat(fs, path)
-<span id="L108" class="ln">   108  </span>		return err == nil &amp;&amp; info.IsDir()
-<span id="L109" class="ln">   109  </span>	}
-<span id="L110" class="ln">   110  </span>	ctx.HasSubdir = func(root, dir string) (rel string, ok bool) {
-<span id="L111" class="ln">   111  </span>		<span class="comment">// TODO add EvalSymlinks support to hackpadfs</span>
-<span id="L112" class="ln">   112  </span>		const sep = &#34;/&#34;
-<span id="L113" class="ln">   113  </span>		root = path.Clean(root)
-<span id="L114" class="ln">   114  </span>		if !strings.HasSuffix(root, sep) {
-<span id="L115" class="ln">   115  </span>			root += sep
-<span id="L116" class="ln">   116  </span>		}
-<span id="L117" class="ln">   117  </span>		dir = path.Clean(dir)
-<span id="L118" class="ln">   118  </span>		if !strings.HasPrefix(dir, root) {
-<span id="L119" class="ln">   119  </span>			return &#34;&#34;, false
-<span id="L120" class="ln">   120  </span>		}
-<span id="L121" class="ln">   121  </span>		return dir[len(root):], true
-<span id="L122" class="ln">   122  </span>	}
-<span id="L123" class="ln">   123  </span>	ctx.ReadDir = fsReadDir(fs)
-<span id="L124" class="ln">   124  </span>	ctx.OpenFile = func(path string) (io.ReadCloser, error) {
-<span id="L125" class="ln">   125  </span>		return fs.Open(path)
-<span id="L126" class="ln">   126  </span>	}
-<span id="L127" class="ln">   127  </span>	return ctx
-<span id="L128" class="ln">   128  </span>}
-<span id="L129" class="ln">   129  </span>
-<span id="L130" class="ln">   130  </span><span class="comment">// fsReadDir is not used by the FS context at time of writing, but x/packages may begin using it later.</span>
-<span id="L131" class="ln">   131  </span><span class="comment">// Extracted for more thorough testing.</span>
-<span id="L132" class="ln">   132  </span>func fsReadDir(fs hackpadfs.FS) func(dir string) ([]hackpadfs.FileInfo, error) {
-<span id="L133" class="ln">   133  </span>	return func(dir string) ([]hackpadfs.FileInfo, error) {
-<span id="L134" class="ln">   134  </span>		dirEntries, err := hackpadfs.ReadDir(fs, dir)
-<span id="L135" class="ln">   135  </span>		if err != nil {
-<span id="L136" class="ln">   136  </span>			return nil, err
-<span id="L137" class="ln">   137  </span>		}
-<span id="L138" class="ln">   138  </span>		var infos []hackpadfs.FileInfo
-<span id="L139" class="ln">   139  </span>		for _, dirEntry := range dirEntries {
-<span id="L140" class="ln">   140  </span>			info, err := dirEntry.Info()
-<span id="L141" class="ln">   141  </span>			if err != nil {
-<span id="L142" class="ln">   142  </span>				return nil, err
-<span id="L143" class="ln">   143  </span>			}
-<span id="L144" class="ln">   144  </span>			infos = append(infos, info)
-<span id="L145" class="ln">   145  </span>		}
-<span id="L146" class="ln">   146  </span>		return infos, nil
-<span id="L147" class="ln">   147  </span>	}
-<span id="L148" class="ln">   148  </span>}
-<span id="L149" class="ln">   149  </span>
-<span id="L150" class="ln">   150  </span>func findModule(fs hackpadfs.FS, dir string) (moduleName, moduleDir string, err error) {
-<span id="L151" class="ln">   151  </span>	for ; dir != &#34;.&#34;; dir = path.Dir(dir) {
-<span id="L152" class="ln">   152  </span>		var ok bool
-<span id="L153" class="ln">   153  </span>		moduleName, moduleDir, ok, err = getModule(fs, dir)
-<span id="L154" class="ln">   154  </span>		if ok || err != nil {
-<span id="L155" class="ln">   155  </span>			return
-<span id="L156" class="ln">   156  </span>		}
-<span id="L157" class="ln">   157  </span>	}
-<span id="L158" class="ln">   158  </span>	moduleName, moduleDir, _, err = getModule(fs, dir)
-<span id="L159" class="ln">   159  </span>	return
-<span id="L160" class="ln">   160  </span>}
-<span id="L161" class="ln">   161  </span>
-<span id="L162" class="ln">   162  </span>func getModule(fs hackpadfs.FS, dir string) (moduleName, moduleDir string, ok bool, err error) {
-<span id="L163" class="ln">   163  </span>	file := path.Join(dir, &#34;go.mod&#34;)
-<span id="L164" class="ln">   164  </span>	_, err = hackpadfs.Stat(fs, file)
-<span id="L165" class="ln">   165  </span>	if err != nil {
-<span id="L166" class="ln">   166  </span>		if errors.Is(err, hackpadfs.ErrNotExist) {
-<span id="L167" class="ln">   167  </span>			err = nil
-<span id="L168" class="ln">   168  </span>		}
-<span id="L169" class="ln">   169  </span>		return &#34;&#34;, &#34;&#34;, false, err
-<span id="L170" class="ln">   170  </span>	}
-<span id="L171" class="ln">   171  </span>
-<span id="L172" class="ln">   172  </span>	contents, err := hackpadfs.ReadFile(fs, file)
-<span id="L173" class="ln">   173  </span>	if err != nil {
-<span id="L174" class="ln">   174  </span>		return &#34;&#34;, &#34;&#34;, false, err
-<span id="L175" class="ln">   175  </span>	}
-<span id="L176" class="ln">   176  </span>	modFile, err := modfile.Parse(file, contents, nil)
-<span id="L177" class="ln">   177  </span>	if err != nil {
-<span id="L178" class="ln">   178  </span>		return &#34;&#34;, &#34;&#34;, false, err
-<span id="L179" class="ln">   179  </span>	}
-<span id="L180" class="ln">   180  </span>	return modFile.Module.Mod.Path, dir, true, nil
-<span id="L181" class="ln">   181  </span>}
-<span id="L182" class="ln">   182  </span>
+<span id="L57" class="ln">    57  </span>		const dirPermission = 0700
+<span id="L58" class="ln">    58  </span>		setErr(memFS.MkdirAll(moduleGoPath, dirPermission), &amp;sErr)
+<span id="L59" class="ln">    59  </span>		moduleFS, err := hackpadfs.Sub(mountFS, moduleDir)
+<span id="L60" class="ln">    60  </span>		if err != nil {
+<span id="L61" class="ln">    61  </span>			return &#34;&#34;, err
+<span id="L62" class="ln">    62  </span>		}
+<span id="L63" class="ln">    63  </span>		setErr(mountFS.AddMount(path.Join(tempDir, moduleGoPath), moduleFS), &amp;sErr) <span class="comment">// &#34;symlink&#34; original fs inside the new GOPATH-like directory</span>
+<span id="L64" class="ln">    64  </span>		workDirSubPath := strings.TrimPrefix(workingDirectory, moduleDir)
+<span id="L65" class="ln">    65  </span>		workDirSubPath = strings.TrimPrefix(workDirSubPath, &#34;/&#34;)
+<span id="L66" class="ln">    66  </span>		trimDir = path.Join(tempDir, moduleGoPath, workDirSubPath)
+<span id="L67" class="ln">    67  </span>	}
+<span id="L68" class="ln">    68  </span>
+<span id="L69" class="ln">    69  </span>	packageName, coverageFile := path.Split(filePattern)
+<span id="L70" class="ln">    70  </span>	ctx := newFSBuildContext(mountFS, workingDirectory, options)
+<span id="L71" class="ln">    71  </span>	pkg, err := ctx.Import(packageName, workingDirectory, build.FindOnly)
+<span id="L72" class="ln">    72  </span>	setErr(err, &amp;sErr)
+<span id="L73" class="ln">    73  </span>	coverageFile = path.Join(pkg.Dir, coverageFile)
+<span id="L74" class="ln">    74  </span>	coverageFile = strings.TrimPrefix(coverageFile, trimDir+&#34;/&#34;)
+<span id="L75" class="ln">    75  </span>	return coverageFile, sErr
+<span id="L76" class="ln">    76  </span>}
+<span id="L77" class="ln">    77  </span>
+<span id="L78" class="ln">    78  </span>func panicIfErr(err error) {
+<span id="L79" class="ln">    79  </span>	if err != nil {
+<span id="L80" class="ln">    80  </span>		panic(err)
+<span id="L81" class="ln">    81  </span>	}
+<span id="L82" class="ln">    82  </span>}
+<span id="L83" class="ln">    83  </span>
+<span id="L84" class="ln">    84  </span>func setErr(err error, setErr *error) {
+<span id="L85" class="ln">    85  </span>	if err != nil &amp;&amp; *setErr == nil {
+<span id="L86" class="ln">    86  </span>		*setErr = err
+<span id="L87" class="ln">    87  </span>	}
+<span id="L88" class="ln">    88  </span>}
+<span id="L89" class="ln">    89  </span>
+<span id="L90" class="ln">    90  </span>func makePathList(elems ...[]string) string {
+<span id="L91" class="ln">    91  </span>	var allElems []string
+<span id="L92" class="ln">    92  </span>	for _, e := range elems {
+<span id="L93" class="ln">    93  </span>		allElems = append(allElems, e...)
+<span id="L94" class="ln">    94  </span>	}
+<span id="L95" class="ln">    95  </span>	return strings.Join(allElems, string(filepath.ListSeparator))
+<span id="L96" class="ln">    96  </span>}
+<span id="L97" class="ln">    97  </span>
+<span id="L98" class="ln">    98  </span>func newFSBuildContext(fs hackpadfs.FS, workingDirectory string, options Options) build.Context {
+<span id="L99" class="ln">    99  </span>	ctx := build.Default
+<span id="L100" class="ln">   100  </span>	ctx.GOROOT = options.GoRoot
+<span id="L101" class="ln">   101  </span>	ctx.GOPATH = options.GoPath
+<span id="L102" class="ln">   102  </span>	ctx.JoinPath = path.Join
+<span id="L103" class="ln">   103  </span>	ctx.SplitPathList = filepath.SplitList
+<span id="L104" class="ln">   104  </span>	ctx.IsAbsPath = func(path string) bool {
+<span id="L105" class="ln">   105  </span>		return !build.IsLocalImport(path)
+<span id="L106" class="ln">   106  </span>	}
+<span id="L107" class="ln">   107  </span>	ctx.IsDir = func(path string) bool {
+<span id="L108" class="ln">   108  </span>		info, err := hackpadfs.Stat(fs, path)
+<span id="L109" class="ln">   109  </span>		return err == nil &amp;&amp; info.IsDir()
+<span id="L110" class="ln">   110  </span>	}
+<span id="L111" class="ln">   111  </span>	ctx.HasSubdir = func(root, dir string) (rel string, ok bool) {
+<span id="L112" class="ln">   112  </span>		<span class="comment">// TODO add EvalSymlinks support to hackpadfs</span>
+<span id="L113" class="ln">   113  </span>		const sep = &#34;/&#34;
+<span id="L114" class="ln">   114  </span>		root = path.Clean(root)
+<span id="L115" class="ln">   115  </span>		if !strings.HasSuffix(root, sep) {
+<span id="L116" class="ln">   116  </span>			root += sep
+<span id="L117" class="ln">   117  </span>		}
+<span id="L118" class="ln">   118  </span>		dir = path.Clean(dir)
+<span id="L119" class="ln">   119  </span>		if !strings.HasPrefix(dir, root) {
+<span id="L120" class="ln">   120  </span>			return &#34;&#34;, false
+<span id="L121" class="ln">   121  </span>		}
+<span id="L122" class="ln">   122  </span>		return dir[len(root):], true
+<span id="L123" class="ln">   123  </span>	}
+<span id="L124" class="ln">   124  </span>	ctx.ReadDir = fsReadDir(fs)
+<span id="L125" class="ln">   125  </span>	ctx.OpenFile = func(path string) (io.ReadCloser, error) {
+<span id="L126" class="ln">   126  </span>		return fs.Open(path)
+<span id="L127" class="ln">   127  </span>	}
+<span id="L128" class="ln">   128  </span>	return ctx
+<span id="L129" class="ln">   129  </span>}
+<span id="L130" class="ln">   130  </span>
+<span id="L131" class="ln">   131  </span><span class="comment">// fsReadDir is not used by the FS context at time of writing, but x/packages may begin using it later.</span>
+<span id="L132" class="ln">   132  </span><span class="comment">// Extracted for more thorough testing.</span>
+<span id="L133" class="ln">   133  </span>func fsReadDir(fs hackpadfs.FS) func(dir string) ([]hackpadfs.FileInfo, error) {
+<span id="L134" class="ln">   134  </span>	return func(dir string) ([]hackpadfs.FileInfo, error) {
+<span id="L135" class="ln">   135  </span>		dirEntries, err := hackpadfs.ReadDir(fs, dir)
+<span id="L136" class="ln">   136  </span>		if err != nil {
+<span id="L137" class="ln">   137  </span>			return nil, err
+<span id="L138" class="ln">   138  </span>		}
+<span id="L139" class="ln">   139  </span>		var infos []hackpadfs.FileInfo
+<span id="L140" class="ln">   140  </span>		for _, dirEntry := range dirEntries {
+<span id="L141" class="ln">   141  </span>			info, err := dirEntry.Info()
+<span id="L142" class="ln">   142  </span>			if err != nil {
+<span id="L143" class="ln">   143  </span>				return nil, err
+<span id="L144" class="ln">   144  </span>			}
+<span id="L145" class="ln">   145  </span>			infos = append(infos, info)
+<span id="L146" class="ln">   146  </span>		}
+<span id="L147" class="ln">   147  </span>		return infos, nil
+<span id="L148" class="ln">   148  </span>	}
+<span id="L149" class="ln">   149  </span>}
+<span id="L150" class="ln">   150  </span>
+<span id="L151" class="ln">   151  </span>func findModule(fs hackpadfs.FS, dir string) (moduleName, moduleDir string, err error) {
+<span id="L152" class="ln">   152  </span>	for ; dir != &#34;.&#34;; dir = path.Dir(dir) {
+<span id="L153" class="ln">   153  </span>		var ok bool
+<span id="L154" class="ln">   154  </span>		moduleName, moduleDir, ok, err = getModule(fs, dir)
+<span id="L155" class="ln">   155  </span>		if ok || err != nil {
+<span id="L156" class="ln">   156  </span>			return
+<span id="L157" class="ln">   157  </span>		}
+<span id="L158" class="ln">   158  </span>	}
+<span id="L159" class="ln">   159  </span>	moduleName, moduleDir, _, err = getModule(fs, dir)
+<span id="L160" class="ln">   160  </span>	return
+<span id="L161" class="ln">   161  </span>}
+<span id="L162" class="ln">   162  </span>
+<span id="L163" class="ln">   163  </span>func getModule(fs hackpadfs.FS, dir string) (moduleName, moduleDir string, ok bool, err error) {
+<span id="L164" class="ln">   164  </span>	file := path.Join(dir, &#34;go.mod&#34;)
+<span id="L165" class="ln">   165  </span>	_, err = hackpadfs.Stat(fs, file)
+<span id="L166" class="ln">   166  </span>	if err != nil {
+<span id="L167" class="ln">   167  </span>		if errors.Is(err, hackpadfs.ErrNotExist) {
+<span id="L168" class="ln">   168  </span>			err = nil
+<span id="L169" class="ln">   169  </span>		}
+<span id="L170" class="ln">   170  </span>		return &#34;&#34;, &#34;&#34;, false, err
+<span id="L171" class="ln">   171  </span>	}
+<span id="L172" class="ln">   172  </span>
+<span id="L173" class="ln">   173  </span>	contents, err := hackpadfs.ReadFile(fs, file)
+<span id="L174" class="ln">   174  </span>	if err != nil {
+<span id="L175" class="ln">   175  </span>		return &#34;&#34;, &#34;&#34;, false, err
+<span id="L176" class="ln">   176  </span>	}
+<span id="L177" class="ln">   177  </span>	modFile, err := modfile.Parse(file, contents, nil)
+<span id="L178" class="ln">   178  </span>	if err != nil {
+<span id="L179" class="ln">   179  </span>		return &#34;&#34;, &#34;&#34;, false, err
+<span id="L180" class="ln">   180  </span>	}
+<span id="L181" class="ln">   181  </span>	return modFile.Module.Mod.Path, dir, true, nil
+<span id="L182" class="ln">   182  </span>}
+<span id="L183" class="ln">   183  </span>
 </pre><p></p>
 
 <div id="footer">
