--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/doc.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/doc.go.html
@@ -67,7 +67,7 @@
 <span id="L10" class="ln">    10  </span><span class="comment">//   gopages</span>
 <span id="L11" class="ln">    11  </span><span class="comment">//</span>
 <span id="L12" class="ln">    12  </span><span class="comment">// {{.Usage | wordWrap 80 | comment}}</span>
-<span id="L13" class="ln">    13  </span><span class="comment">//{{/* Do not remove the blank line below, otherwise this template is incorrectly displayed for the cmd/gendoc package. */}}</span>
+<span id="L13" class="ln">    13  </span><span class="comment">// {{- /* Do not remove the blank line below, otherwise this template is incorrectly displayed for the cmd/gendoc package. */}}</span>
 <span id="L14" class="ln">    14  </span>
 <span id="L15" class="ln">    15  </span>package main
 <span id="L16" class="ln">    16  </span>
