--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
@@ -90,44 +90,45 @@
 <span id="L33" class="ln">    33  </span>		return err
 <span id="L34" class="ln">    34  </span>	}
 <span id="L35" class="ln">    35  </span>
-<span id="L36" class="ln">    36  </span>	f, err := os.OpenFile(outPath, os.O_CREATE|os.O_TRUNC|os.O_WRONLY, 0644)
-<span id="L37" class="ln">    37  </span>	if err != nil {
-<span id="L38" class="ln">    38  </span>		return err
-<span id="L39" class="ln">    39  </span>	}
-<span id="L40" class="ln">    40  </span>	defer f.Close()
-<span id="L41" class="ln">    41  </span>	return genDoc(templateBytes, f)
-<span id="L42" class="ln">    42  </span>}
-<span id="L43" class="ln">    43  </span>
-<span id="L44" class="ln">    44  </span>func genDoc(templateBytes []byte, w io.Writer) error {
-<span id="L45" class="ln">    45  </span>	templateStr := string(templateBytes)
-<span id="L46" class="ln">    46  </span>	templateStr = strings.Replace(templateStr, &#34;\n\npackage main&#34;, &#34;\npackage main&#34;, 1) <span class="comment">// enable the comment for godoc by removing the blank line above &#39;package main&#39;</span>
-<span id="L47" class="ln">    47  </span>
-<span id="L48" class="ln">    48  </span>	tmpl := template.New(&#34;&#34;)
-<span id="L49" class="ln">    49  </span>	tmpl.Funcs(funcMap())
-<span id="L50" class="ln">    50  </span>	docTemplate, err := tmpl.Parse(templateStr)
-<span id="L51" class="ln">    51  </span>	if err != nil {
-<span id="L52" class="ln">    52  </span>		return err
-<span id="L53" class="ln">    53  </span>	}
-<span id="L54" class="ln">    54  </span>
-<span id="L55" class="ln">    55  </span>	_, usageOutput, err := flags.Parse(&#34;-help&#34;)
-<span id="L56" class="ln">    56  </span>	if err != flag.ErrHelp {
-<span id="L57" class="ln">    57  </span>		return err
-<span id="L58" class="ln">    58  </span>	}
-<span id="L59" class="ln">    59  </span>
-<span id="L60" class="ln">    60  </span>	return docTemplate.Execute(w, map[string]interface{}{
-<span id="L61" class="ln">    61  </span>		&#34;Usage&#34;: usageOutput,
-<span id="L62" class="ln">    62  </span>	})
-<span id="L63" class="ln">    63  </span>}
-<span id="L64" class="ln">    64  </span>
-<span id="L65" class="ln">    65  </span>func funcMap() template.FuncMap {
-<span id="L66" class="ln">    66  </span>	return map[string]interface{}{
-<span id="L67" class="ln">    67  </span>		&#34;comment&#34;: func(s string) string {
-<span id="L68" class="ln">    68  </span>			return strings.ReplaceAll(s, &#34;\n&#34;, &#34;\n// &#34;)
-<span id="L69" class="ln">    69  </span>		},
-<span id="L70" class="ln">    70  </span>		&#34;wordWrap&#34;: wordWrapLines,
-<span id="L71" class="ln">    71  </span>	}
-<span id="L72" class="ln">    72  </span>}
-<span id="L73" class="ln">    73  </span>
+<span id="L36" class="ln">    36  </span>	const genDocPerm = 0644
+<span id="L37" class="ln">    37  </span>	f, err := os.OpenFile(outPath, os.O_CREATE|os.O_TRUNC|os.O_WRONLY, genDocPerm)
+<span id="L38" class="ln">    38  </span>	if err != nil {
+<span id="L39" class="ln">    39  </span>		return err
+<span id="L40" class="ln">    40  </span>	}
+<span id="L41" class="ln">    41  </span>	defer f.Close()
+<span id="L42" class="ln">    42  </span>	return genDoc(templateBytes, f)
+<span id="L43" class="ln">    43  </span>}
+<span id="L44" class="ln">    44  </span>
+<span id="L45" class="ln">    45  </span>func genDoc(templateBytes []byte, w io.Writer) error {
+<span id="L46" class="ln">    46  </span>	templateStr := string(templateBytes)
+<span id="L47" class="ln">    47  </span>	templateStr = strings.Replace(templateStr, &#34;\n\npackage main&#34;, &#34;\npackage main&#34;, 1) <span class="comment">// enable the comment for godoc by removing the blank line above &#39;package main&#39;</span>
+<span id="L48" class="ln">    48  </span>
+<span id="L49" class="ln">    49  </span>	tmpl := template.New(&#34;&#34;)
+<span id="L50" class="ln">    50  </span>	tmpl.Funcs(funcMap())
+<span id="L51" class="ln">    51  </span>	docTemplate, err := tmpl.Parse(templateStr)
+<span id="L52" class="ln">    52  </span>	if err != nil {
+<span id="L53" class="ln">    53  </span>		return err
+<span id="L54" class="ln">    54  </span>	}
+<span id="L55" class="ln">    55  </span>
+<span id="L56" class="ln">    56  </span>	_, usageOutput, err := flags.Parse(&#34;-help&#34;)
+<span id="L57" class="ln">    57  </span>	if !errors.Is(err, flag.ErrHelp) {
+<span id="L58" class="ln">    58  </span>		return err
+<span id="L59" class="ln">    59  </span>	}
+<span id="L60" class="ln">    60  </span>
+<span id="L61" class="ln">    61  </span>	return docTemplate.Execute(w, map[string]interface{}{
+<span id="L62" class="ln">    62  </span>		&#34;Usage&#34;: usageOutput,
+<span id="L63" class="ln">    63  </span>	})
+<span id="L64" class="ln">    64  </span>}
+<span id="L65" class="ln">    65  </span>
+<span id="L66" class="ln">    66  </span>func funcMap() template.FuncMap {
+<span id="L67" class="ln">    67  </span>	return map[string]interface{}{
+<span id="L68" class="ln">    68  </span>		&#34;comment&#34;: func(s string) string {
+<span id="L69" class="ln">    69  </span>			return strings.TrimSpace(strings.ReplaceAll(s, &#34;\n&#34;, &#34;\n// &#34;))
+<span id="L70" class="ln">    70  </span>		},
+<span id="L71" class="ln">    71  </span>		&#34;wordWrap&#34;: wordWrapLines,
+<span id="L72" class="ln">    72  </span>	}
+<span id="L73" class="ln">    73  </span>}
+<span id="L74" class="ln">    74  </span>
 </pre><p></p>
 
 <div id="footer">
