--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/wrap.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/wrap.go.html
@@ -125,65 +125,66 @@
 <span id="L68" class="ln">    68  </span>}
 <span id="L69" class="ln">    69  </span>
 <span id="L70" class="ln">    70  </span>func (z breakZone) BestBreak() int {
-<span id="L71" class="ln">    71  </span>	halfLength := (z.max - z.min) / 2
-<span id="L72" class="ln">    72  </span>	if z.min &gt; halfLength {
-<span id="L73" class="ln">    73  </span>		return z.min
-<span id="L74" class="ln">    74  </span>	}
-<span id="L75" class="ln">    75  </span>	return z.max
-<span id="L76" class="ln">    76  </span>}
-<span id="L77" class="ln">    77  </span>
-<span id="L78" class="ln">    78  </span><span class="comment">// nonBreakZones returns index ranges where line breaks should be avoided</span>
-<span id="L79" class="ln">    79  </span>func nonBreakZones(s string) []breakZone {
-<span id="L80" class="ln">    80  </span>	var nonBreakZones []breakZone
-<span id="L81" class="ln">    81  </span>	lastQuote := -1
-<span id="L82" class="ln">    82  </span>	for ix, r := range s {
-<span id="L83" class="ln">    83  </span>		if r == &#39;&#34;&#39; {
-<span id="L84" class="ln">    84  </span>			if lastQuote == -1 {
-<span id="L85" class="ln">    85  </span>				lastQuote = ix
-<span id="L86" class="ln">    86  </span>			} else {
-<span id="L87" class="ln">    87  </span>				nonBreakZones = append(nonBreakZones, breakZone{
-<span id="L88" class="ln">    88  </span>					min: lastQuote,
-<span id="L89" class="ln">    89  </span>					max: ix + 1,
-<span id="L90" class="ln">    90  </span>				})
-<span id="L91" class="ln">    91  </span>				lastQuote = -1
-<span id="L92" class="ln">    92  </span>			}
-<span id="L93" class="ln">    93  </span>		}
-<span id="L94" class="ln">    94  </span>	}
-<span id="L95" class="ln">    95  </span>	return nonBreakZones
-<span id="L96" class="ln">    96  </span>}
-<span id="L97" class="ln">    97  </span>
-<span id="L98" class="ln">    98  </span>func updateNonBreakZones(breakCandidates []int, avoidZones []breakZone) []int {
-<span id="L99" class="ln">    99  </span>	var validCandidates []int
-<span id="L100" class="ln">   100  </span>	for _, c := range breakCandidates {
-<span id="L101" class="ln">   101  </span>		validIndex := c
-<span id="L102" class="ln">   102  </span>		for _, zone := range avoidZones {
-<span id="L103" class="ln">   103  </span>			if zone.Contains(c) {
-<span id="L104" class="ln">   104  </span>				validIndex = zone.BestBreak()
-<span id="L105" class="ln">   105  </span>				break
-<span id="L106" class="ln">   106  </span>			}
-<span id="L107" class="ln">   107  </span>		}
-<span id="L108" class="ln">   108  </span>		validCandidates = append(validCandidates, validIndex)
-<span id="L109" class="ln">   109  </span>	}
-<span id="L110" class="ln">   110  </span>	return validCandidates
-<span id="L111" class="ln">   111  </span>}
-<span id="L112" class="ln">   112  </span>
-<span id="L113" class="ln">   113  </span>func smallestNonNegative(values ...int) (x int) {
-<span id="L114" class="ln">   114  </span>	var result int
-<span id="L115" class="ln">   115  </span>	firstPositiveIndex := -1
-<span id="L116" class="ln">   116  </span>	for i, val := range values {
-<span id="L117" class="ln">   117  </span>		if val &gt;= 0 {
-<span id="L118" class="ln">   118  </span>			firstPositiveIndex, result = i, val
-<span id="L119" class="ln">   119  </span>			break
-<span id="L120" class="ln">   120  </span>		}
-<span id="L121" class="ln">   121  </span>	}
-<span id="L122" class="ln">   122  </span>	for _, val := range values[firstPositiveIndex+1:] {
-<span id="L123" class="ln">   123  </span>		if val &gt;= 0 &amp;&amp; val &lt; result {
-<span id="L124" class="ln">   124  </span>			result = val
-<span id="L125" class="ln">   125  </span>		}
-<span id="L126" class="ln">   126  </span>	}
-<span id="L127" class="ln">   127  </span>	return result
-<span id="L128" class="ln">   128  </span>}
-<span id="L129" class="ln">   129  </span>
+<span id="L71" class="ln">    71  </span>	const halfDivisor = 2
+<span id="L72" class="ln">    72  </span>	halfLength := (z.max - z.min) / halfDivisor
+<span id="L73" class="ln">    73  </span>	if z.min &gt; halfLength {
+<span id="L74" class="ln">    74  </span>		return z.min
+<span id="L75" class="ln">    75  </span>	}
+<span id="L76" class="ln">    76  </span>	return z.max
+<span id="L77" class="ln">    77  </span>}
+<span id="L78" class="ln">    78  </span>
+<span id="L79" class="ln">    79  </span><span class="comment">// nonBreakZones returns index ranges where line breaks should be avoided</span>
+<span id="L80" class="ln">    80  </span>func nonBreakZones(s string) []breakZone {
+<span id="L81" class="ln">    81  </span>	var nonBreakZones []breakZone
+<span id="L82" class="ln">    82  </span>	lastQuote := -1
+<span id="L83" class="ln">    83  </span>	for ix, r := range s {
+<span id="L84" class="ln">    84  </span>		if r == &#39;&#34;&#39; {
+<span id="L85" class="ln">    85  </span>			if lastQuote == -1 {
+<span id="L86" class="ln">    86  </span>				lastQuote = ix
+<span id="L87" class="ln">    87  </span>			} else {
+<span id="L88" class="ln">    88  </span>				nonBreakZones = append(nonBreakZones, breakZone{
+<span id="L89" class="ln">    89  </span>					min: lastQuote,
+<span id="L90" class="ln">    90  </span>					max: ix + 1,
+<span id="L91" class="ln">    91  </span>				})
+<span id="L92" class="ln">    92  </span>				lastQuote = -1
+<span id="L93" class="ln">    93  </span>			}
+<span id="L94" class="ln">    94  </span>		}
+<span id="L95" class="ln">    95  </span>	}
+<span id="L96" class="ln">    96  </span>	return nonBreakZones
+<span id="L97" class="ln">    97  </span>}
+<span id="L98" class="ln">    98  </span>
+<span id="L99" class="ln">    99  </span>func updateNonBreakZones(breakCandidates []int, avoidZones []breakZone) []int {
+<span id="L100" class="ln">   100  </span>	var validCandidates []int
+<span id="L101" class="ln">   101  </span>	for _, c := range breakCandidates {
+<span id="L102" class="ln">   102  </span>		validIndex := c
+<span id="L103" class="ln">   103  </span>		for _, zone := range avoidZones {
+<span id="L104" class="ln">   104  </span>			if zone.Contains(c) {
+<span id="L105" class="ln">   105  </span>				validIndex = zone.BestBreak()
+<span id="L106" class="ln">   106  </span>				break
+<span id="L107" class="ln">   107  </span>			}
+<span id="L108" class="ln">   108  </span>		}
+<span id="L109" class="ln">   109  </span>		validCandidates = append(validCandidates, validIndex)
+<span id="L110" class="ln">   110  </span>	}
+<span id="L111" class="ln">   111  </span>	return validCandidates
+<span id="L112" class="ln">   112  </span>}
+<span id="L113" class="ln">   113  </span>
+<span id="L114" class="ln">   114  </span>func smallestNonNegative(values ...int) (x int) {
+<span id="L115" class="ln">   115  </span>	var result int
+<span id="L116" class="ln">   116  </span>	firstPositiveIndex := -1
+<span id="L117" class="ln">   117  </span>	for i, val := range values {
+<span id="L118" class="ln">   118  </span>		if val &gt;= 0 {
+<span id="L119" class="ln">   119  </span>			firstPositiveIndex, result = i, val
+<span id="L120" class="ln">   120  </span>			break
+<span id="L121" class="ln">   121  </span>		}
+<span id="L122" class="ln">   122  </span>	}
+<span id="L123" class="ln">   123  </span>	for _, val := range values[firstPositiveIndex+1:] {
+<span id="L124" class="ln">   124  </span>		if val &gt;= 0 &amp;&amp; val &lt; result {
+<span id="L125" class="ln">   125  </span>			result = val
+<span id="L126" class="ln">   126  </span>		}
+<span id="L127" class="ln">   127  </span>	}
+<span id="L128" class="ln">   128  </span>	return result
+<span id="L129" class="ln">   129  </span>}
+<span id="L130" class="ln">   130  </span>
 </pre><p></p>
 
 <div id="footer">
