--- a/gopages/src/github.com/johnstarich/go/gopages/internal/safememfs/memfs.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/safememfs/memfs.go.html
@@ -64,31 +64,33 @@
 <span id="L7" class="ln">     7  </span>)
 <span id="L8" class="ln">     8  </span>
 <span id="L9" class="ln">     9  </span><span class="comment">// New creates a new billy/memfs file system that can handle opening directories</span>
-<span id="L10" class="ln">    10  </span>func New() billy.Filesystem {
+<span id="L10" class="ln">    10  </span>func New() *SafeOpener {
 <span id="L11" class="ln">    11  </span>	fs := memfs.New()
-<span id="L12" class="ln">    12  </span>	return &amp;safeOpener{fs}
+<span id="L12" class="ln">    12  </span>	return &amp;SafeOpener{fs}
 <span id="L13" class="ln">    13  </span>}
 <span id="L14" class="ln">    14  </span>
-<span id="L15" class="ln">    15  </span>type safeOpener struct {
-<span id="L16" class="ln">    16  </span>	billy.Filesystem
-<span id="L17" class="ln">    17  </span>}
-<span id="L18" class="ln">    18  </span>
-<span id="L19" class="ln">    19  </span>func (s *safeOpener) Open(name string) (billy.File, error) {
-<span id="L20" class="ln">    20  </span>	info, err := s.Filesystem.Stat(name)
-<span id="L21" class="ln">    21  </span>	if err != nil {
-<span id="L22" class="ln">    22  </span>		return nil, err
-<span id="L23" class="ln">    23  </span>	}
-<span id="L24" class="ln">    24  </span>
-<span id="L25" class="ln">    25  </span>	var file billy.File
-<span id="L26" class="ln">    26  </span>	<span class="comment">// memfs.Open doesn&#39;t work for directories, so create a false dir for those instead</span>
-<span id="L27" class="ln">    27  </span>	if info.IsDir() {
-<span id="L28" class="ln">    28  </span>		file, err = memfs.New().Create(name)
-<span id="L29" class="ln">    29  </span>	} else {
-<span id="L30" class="ln">    30  </span>		file, err = s.Filesystem.Open(name)
-<span id="L31" class="ln">    31  </span>	}
-<span id="L32" class="ln">    32  </span>	return file, err
-<span id="L33" class="ln">    33  </span>}
-<span id="L34" class="ln">    34  </span>
+<span id="L15" class="ln">    15  </span><span class="comment">// SafeOpener is a billy.Filesystem that fixes Open() behavior on directories with a work-around</span>
+<span id="L16" class="ln">    16  </span>type SafeOpener struct {
+<span id="L17" class="ln">    17  </span>	billy.Filesystem
+<span id="L18" class="ln">    18  </span>}
+<span id="L19" class="ln">    19  </span>
+<span id="L20" class="ln">    20  </span><span class="comment">// Open reimplements memfs.FS.Open() to fix bad behavior on opening directories</span>
+<span id="L21" class="ln">    21  </span>func (s *SafeOpener) Open(name string) (billy.File, error) {
+<span id="L22" class="ln">    22  </span>	info, err := s.Filesystem.Stat(name)
+<span id="L23" class="ln">    23  </span>	if err != nil {
+<span id="L24" class="ln">    24  </span>		return nil, err
+<span id="L25" class="ln">    25  </span>	}
+<span id="L26" class="ln">    26  </span>
+<span id="L27" class="ln">    27  </span>	var file billy.File
+<span id="L28" class="ln">    28  </span>	<span class="comment">// memfs.Open doesn&#39;t work for directories, so create a false dir for those instead</span>
+<span id="L29" class="ln">    29  </span>	if info.IsDir() {
+<span id="L30" class="ln">    30  </span>		file, err = memfs.New().Create(name)
+<span id="L31" class="ln">    31  </span>	} else {
+<span id="L32" class="ln">    32  </span>		file, err = s.Filesystem.Open(name)
+<span id="L33" class="ln">    33  </span>	}
+<span id="L34" class="ln">    34  </span>	return file, err
+<span id="L35" class="ln">    35  </span>}
+<span id="L36" class="ln">    36  </span>
 </pre><p></p>
 
 <div id="footer">
